--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -111,7 +111,7 @@
   "buy_alias": "Koupit alias",
   "buy_asset_with_burst": "Prodám __assetName__ s burst",
   "buy_it_q": "Koupit?",
-  "buy_order_description": "Buy <strong>__quantity__ __asset_name__</strong> assets at <strong>__burst__ BURST</strong> each.",
+  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ BURST each.",
   "buy_order_description_help": "Per whole asset bought you will pay __burst__ BURST, making a total of __total_burst__ BURST once everything has been purchased.",
   "buy_orders": "Objednávky pro koupi",
   "buyer": "Kupující",
@@ -436,7 +436,7 @@
   "forged_by_you": "Forged By You",
   "forged_fees_total": "Forged Fees Total",
   "forging": "Forging",
-  "fork_warning": "<strong>Warning</strong>: You are most likely on a fork (you have forged the last 10 blocks).",
+  "fork_warning": "Warning: You are most likely on a fork (you have forged the last 10 blocks).",
   "form_warnings": "Form Warnings",
   "form_warnings_help": "Zobrazit výstrahu, pokud množství / poplatek je vyšší než zadaný níže.",
   "free_memory": "Volná paměť",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Interface Tutorial",
   "is_scanning": "Skenování",
   "issue_asset": "Issue Asset",
-  "issue_asset_warning": "<strong>Warning</strong>: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
   "item_name": "Název položky",
   "language": "Jazyk",
   "last_block": "Poslední blok",
@@ -583,7 +583,7 @@
   "no_polls_found": "Žádné ankety nebyly nalezeny.",
   "no_products_found": "Žádné produkty nebyly nalezeny.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_warning": "<strong>Warning!</strong>: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
   "no_purchased_products_found": "Nebyly nalezeny žádné zakoupené produkty.",
   "no_sell_orders_for_asset": "Žádné příkazy k prodeji tohoto aktiva.",
   "no_trade_history": "Historie obchodování není k dispozici.",
@@ -634,7 +634,7 @@
   "passphrase_length_warning": "Vaše heslo musí mít nejméně 35 znaků.",
   "passphrase_remote_warning": "Vaše přístupové heslo bude odesláno na server!",
   "passphrase_required_to_decrypt_data": "Pro dešifrování je potřeba vaše heslo.",
-  "passphrase_warning": "<strong>Attention</strong>: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
+  "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Vaše heslo je velmi důležité! Aby jste si byli jisti, že je uloženo, prosím, napište, prosím, vaše heslo níže: ",
   "password_required_for_decryption": "K dešifrování této zprávy je potřeba vaše heslo.",
   "payload": "Datová část",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "Účtu příjemce nemá veřejný klíč, což znamená, že to nikdy neprovedl odchozí transakce. Účet má bqlqnc __burst__ burst. Prosím. zkontrolujte adresu příjemce před odesláním.",
   "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "There is a problem with the recipient account:",
-  "recipient_public_key_account": "The public key corresponds to account <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "Veřejný klíč tohoto účtu je již oznámen. Použijte místo toho ID účtu.",
   "recipient_unknown": "Účet příjemce je neznámý účet, což znamená, že na něm nikdy neproběhly příchozí nebo odchozí transakce. Prosím zkontrolujte adresu příjemce před odesláním.",
   "recipient_unknown_pka": "Účet příjemce je neznámý účet, což znamená, že na něm nikdy neproběhly příchozí nebo odchozí transakce. Můžete zvýšit zabezpečení tím, že poskytnete veřejný klíč příjemce.",
