--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Avanzado",
   "alias": "Alias",
   "alias_account_help": "El alias hará referencia al número de cuenta introducido y se puede enviar a él BURST, mensajes, etc..",
-  "alias_account_link": "El alias enlaza a la cuenta <strong>__account_id__</strong>",
+  "alias_account_link": "El alias enlaza a la cuenta __account_id__",
   "alias_account_no_link": "El alias no enlaza a ninguna cuenta. ",
   "alias_assignment": "Asignar Alias",
   "alias_buy": "Comprar Alias",
@@ -64,8 +64,8 @@
   "asset_decimals": "Decimales del Activo",
   "asset_decimals_help": "Número máximo de dígitos permitidos después del punto decimal en la cantidad de activos.",
   "asset_exchange": "Intercambio de Activos",
-  "asset_exchange_duplicates_warning": "<strong>Aviso</strong>: Hay otro activo con el mismo nombre en el intercambio de activos. Por favor, asegúrese de escoger el correcto. Consulte el ID de cuenta y de activo como confirmación.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Aviso</strong>: Hay otros __count__ activos con el mismo nombre en el intercambio de activos. Por favor, asegúrese de escoger el correcto. Consulte el ID de cuenta y de activo como confirmación.",
+  "asset_exchange_duplicates_warning": "Aviso: Hay otro activo con el mismo nombre en el intercambio de activos. Por favor, asegúrese de escoger el correcto. Consulte el ID de cuenta y de activo como confirmación.",
+  "asset_exchange_duplicates_warning_plural": "Aviso: Hay otros __count__ activos con el mismo nombre en el intercambio de activos. Por favor, asegúrese de escoger el correcto. Consulte el ID de cuenta y de activo como confirmación.",
   "asset_exchange_tutorial": "Tutorial del Intercambio de Activos",
   "asset_issuance": "Emisión de Activo",
   "asset_minimum_fee_help": "La tarifa mínima para emitir un activo es de 1,000 BURST.",
@@ -111,7 +111,7 @@
   "buy_alias": "Comprar Alias",
   "buy_asset_with_burst": "Comprar__assetName__ con BURST",
   "buy_it_q": "¿Comprar?",
-  "buy_order_description": "Comprar <strong>__quantity__ __asset_name__</strong> activos a <strong>__burst__ BURST</strong> cada uno.",
+  "buy_order_description": "Comprar __quantity__ __asset_name__ activos a __burst__ BURST cada uno.",
   "buy_order_description_help": "Por cada activo comprado pagará __burst__ BURST, por un total de __total_burst__ BURST una vez todo haya sido comprado.",
   "buy_orders": "Órdenes de Compra",
   "buyer": "Comprador",
@@ -152,10 +152,10 @@
   "connected_peers": "Pares Conectados",
   "console": "Consola",
   "console_opened": "Consola abierta. Iniciado el registro...",
-  "contact_account_link": "El contacto enlaza a la cuenta <strong>__account_id__</strong>.",
+  "contact_account_link": "El contacto enlaza a la cuenta __account_id__.",
   "contact_name": "Nombre de Contacto",
   "contacts": "Contactos",
-  "contacts_local_storage_help": "<strong>Recuerde</strong>: Los contactos se almacenan localmente, no en la cadena de bloques.",
+  "contacts_local_storage_help": "Recuerde: Los contactos se almacenan localmente, no en la cadena de bloques.",
   "contacts_no_db_warning": "Su navegador no soporta acceso a base de datos, sin el cual no es posible crear contactos.",
   "continue_forging": "Continuar Forja",
   "copy_account_id": "Copiar ID de Cuenta",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Pago ordinario no válido.",
   "error_invalid_referenced_transaction_hash": "Hash de transacción de referencia no válido.",
   "error_invalid_seller": "ID de Vendedor No Válida",
-  "error_invalid_token": "El identificador es <strong>INVÁLIDO</strong>. Parece pertenecer a la cuenta __account_link__. Fue generado en __timestamp__.",
+  "error_invalid_token": "El identificador es INVÁLIDO. Parece pertenecer a la cuenta __account_link__. Fue generado en __timestamp__.",
   "error_issue_asset": "¡Se ha producido un error desconocido! El Activo puede no haber sido creado.",
   "error_max_amount_warning": "La cantidad es mayor de __burst__ BURST. ¿Está seguro de que quiere continuar? Haga clic de nuevo en Enviar para confirmar.",
   "error_max_asset_transfer_warning": "La cantidad especificada es mayor de __qty__. ¿Seguro que desea continuar? Haga clic en el botón Enviar para confirmar.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Forjado Por Usted",
   "forged_fees_total": "Total de Tarifas Forjadas",
   "forging": "Forja",
-  "fork_warning": "<strong>Aviso</strong>: Es probable que se encuentre en una bifurcación (usted ha forjado los últimos 10 bloques).",
+  "fork_warning": "Aviso: Es probable que se encuentre en una bifurcación (usted ha forjado los últimos 10 bloques).",
   "form_warnings": "Avisos del Formulario",
   "form_warnings_help": "Mostrar un aviso cuando la cantidad / tarifa introducida es mayor que la especificada aquí.",
   "free_memory": "Memoria Libre",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Tutorial del Interfaz",
   "is_scanning": "Está Escaneando",
   "issue_asset": "Emitir Activo",
-  "issue_asset_warning": "<strong>Aviso</strong>: Una vez enviada, nunca podrá cambiar esta información. Asegúrese de que es correcta.",
+  "issue_asset_warning": "Aviso: Una vez enviada, nunca podrá cambiar esta información. Asegúrese de que es correcta.",
   "item_name": "Nombre de Artículo",
   "language": "Idioma",
   "last_block": "Último Bloque",
@@ -583,7 +583,7 @@
   "no_polls_found": "No se han encontrado encuestas.",
   "no_products_found": "No se han encontrado artículos.",
   "no_products_listed_yet": "Aún no ha puesto ningún artículo en venta, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>añada uno.</a>",
-  "no_public_key_warning": "<strong>¡Aviso!</strong>: ¡Su cuenta no tiene clave pública! Esto significa que no está protegida como otras cuentas. Debe realizar una transacción de salida para arreglarlo.",
+  "no_public_key_warning": "¡Aviso!: ¡Su cuenta no tiene clave pública! Esto significa que no está protegida como otras cuentas. Debe realizar una transacción de salida para arreglarlo.",
   "no_purchased_products_found": "No se han encontrado artículos comprados.",
   "no_sell_orders_for_asset": "No hay órdenes de venta para este activo.",
   "no_trade_history": "No hay historial de operaciones disponible.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Analizar Transacción",
   "parse_transaction_bytes": "Analizar Bytes de Transacción",
   "passphrase": "Contraseña",
-  "passphrase_disclosure_warning": "<strong>Atención</strong>: Nunca revele su contraseña. ¡Si la pierde, perderá el acceso a su cuenta!",
+  "passphrase_disclosure_warning": "Atención: Nunca revele su contraseña. ¡Si la pierde, perderá el acceso a su cuenta!",
   "passphrase_length_warning": "Su contraseña debe tener por lo menos 35 caracteres de longitud.",
-  "passphrase_remote_warning": "<strong>Aviso</strong>: ¡Su contraseña será enviada al servidor!",
+  "passphrase_remote_warning": "Aviso: ¡Su contraseña será enviada al servidor!",
   "passphrase_required_to_decrypt_data": "Se necesita su contraseña para descifrar estos datos.",
-  "passphrase_warning": "<strong>Atención</strong>: Su contraseña es lo que se interpone entre su cuenta y el resto del mundo. No utilice ninguna frase con sentido, especialmente si aparece en la literatura o la música. <br /><br />Nunca revele su contraseña. ¡Si la pierde, perderá el acceso a su cuenta!",
+  "passphrase_warning": "Atención: Su contraseña es lo que se interpone entre su cuenta y el resto del mundo. No utilice ninguna frase con sentido, especialmente si aparece en la literatura o la música. <br /><br />Nunca revele su contraseña. ¡Si la pierde, perderá el acceso a su cuenta!",
   "passphrase_write_below": "¡Su contraseña es muy importante! Para estar seguro de que la ha guardado, por favor vuelva a escribirla debajo:",
   "password_required_for_decryption": "Se necesita su contraseña para descifrar estos mensajes.",
   "payload": "Carga",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "La cuenta de destino no tiene clave pública, lo que significa que nunca ha realizado una transacción de salida. La cuenta tiene un saldo de __burst__ BURST. Por favor, verifique la cuenta de destino antes de enviar.",
   "recipient_no_public_key_pka": "La cuenta de destino no tiene clave pública, lo que significa que nunca ha enviado ninguna transacción. La cuenta tiene un saldo de __burst__ BURST. Para hacer este envío, también debe suministrar la clave pública de la cuenta de destino.",
   "recipient_problem": "Hay un problema con la cuenta de destino:",
-  "recipient_public_key_account": "La clave pública corresponde a la cuenta <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "La clave pública corresponde a la cuenta __account_id__.",
   "recipient_public_key_already_announced": "La clave pública de esta cuenta ya ha sido declarada. Utilice la ID de cuenta en su lugar.",
   "recipient_unknown": "La cuenta de destino es desconocida, lo que significa que nunca ha recibido o emitido ninguna transacción. Por favor confirme la cuenta de destino antes de enviar.",
   "recipient_unknown_pka": "La cuenta de destino es una cuenta desconocida, lo que significa que nunca he recibido o enviado ninguna transacción. Para hacer este envío, debe suministrar también la clave pública de la cuenta de destino.",
@@ -729,7 +729,7 @@
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender__assetName__ por BURST",
-  "sell_order_description": "Vender <strong>__quantity__ activos __asset_name__</strong> a <strong>__burst__ BURST</strong> cada uno.",
+  "sell_order_description": "Vender __quantity__ activos __asset_name__ a __burst__ BURST cada uno.",
   "sell_order_description_help": "Por cada activo entero vendido recibirá __burst__ BURST, resultando en un total de __total_burst__ BURST una vez se haya vendido todo.",
   "sell_orders": "Órdenes de Venta",
   "sell_to_anyone": "Vender a Cualquiera",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Si quiere empezar a forjar, escriba su contraseña como confirmación.",
   "state": "Estado",
   "status": "Estado",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "La cadena de bloques se está descargando. Por favor espere hasta que esté actualizada.",
   "status_blockchain_rescanning": "La cadena de bloques está siendo escaneada. Por favor, espere hasta que finalice.",
-  "status_new_account": "Bienvenido a su nueva cuenta BURST. Su ID de cuenta es <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Bienvenido a su nueva cuenta BURST. Su ID de cuenta es __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Detener Forja",
   "stop_forging_confirmation": "Si está seguro de que desea detener la forja, haga clic en el botón para confirmar.",
   "stop_forging_confirmation_passphrase": "Si está seguro de detener la forja, introduzca su contraseña como confirmación.",
@@ -831,8 +831,8 @@
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorías)",
   "tentative": "Tentativa",
-  "testnet_login_warning": "Inicie sesión con su cuenta de la <strong>Red de Pruebas</strong> - ¡no con su cuenta real!</div>",
-  "testnet_warning": "<strong>Aviso</strong>: Está conectado a la red de pruebas. ¡No utilice su contraseña real!",
+  "testnet_login_warning": "Inicie sesión con su cuenta de la Red de Pruebas - ¡no con su cuenta real!</div>",
+  "testnet_warning": "Aviso: Está conectado a la red de pruebas. ¡No utilice su contraseña real!",
   "theme_settings": "Ajustes de Tema",
   "time": "Hora",
   "timestamp": "Marca de Tiempo",
