--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Advanced",
   "alias": "Alias",
   "alias_account_help": "O alias fará referencia ó número de conta introducido e pode ser empregado para enviarlle BURST, mensaxes, etc...",
-  "alias_account_link": "O Alias enlaza á conta <strong>__account_id__</strong>",
+  "alias_account_link": "O Alias enlaza á conta __account_id__",
   "alias_account_no_link": "O Alias non enlaza a ningunha conta. ",
   "alias_assignment": "Asignar Alias",
   "alias_buy": "Compra de Alias",
@@ -64,8 +64,8 @@
   "asset_decimals": "Decimais do activo",
   "asset_decimals_help": "Número máximo de díxitos permitidos despois do punto decimal na cantidade de activos.",
   "asset_exchange": "Intercambio de activos",
-  "asset_exchange_duplicates_warning": "<strong>Atención</strong>: Hai outro activo co mesmo nome no AE. Por favor, asegúrese de escollelo correcto. Mire o numero de conta e de activo para confirmar.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Atención</strong>: Hai __ count__ outros activos co mesmo nome no AE. Por favor, asegúrese de escollelo correcto. Mire o numero de conta e de activo para confirmar.",
+  "asset_exchange_duplicates_warning": "Atención: Hai outro activo co mesmo nome no AE. Por favor, asegúrese de escollelo correcto. Mire o numero de conta e de activo para confirmar.",
+  "asset_exchange_duplicates_warning_plural": "Atención: Hai __ count__ outros activos co mesmo nome no AE. Por favor, asegúrese de escollelo correcto. Mire o numero de conta e de activo para confirmar.",
   "asset_exchange_tutorial": "Priručnik za Asset Exchange",
   "asset_issuance": "Emisión de activo",
   "asset_minimum_fee_help": "A comisión mínima para emitir un activo é de 1,000 BURST.",
@@ -111,7 +111,7 @@
   "buy_alias": "Mercar Alias",
   "buy_asset_with_burst": "Comprar __assetName__ con BURST",
   "buy_it_q": "¿Mercar?",
-  "buy_order_description": "Mercar<strong>__quantity__ __asset_name__</strong> activos a <strong>__burst__ BURST</strong> cada un.",
+  "buy_order_description": "Mercar__quantity__ __asset_name__ activos a __burst__ BURST cada un.",
   "buy_order_description_help": "Por cada activo mercado pagará __burst__ BURST, por un total de __total_burst__ BURST unha vez todo teña sido mercado.",
   "buy_orders": "Ordes de compra",
   "buyer": "Comprador",
@@ -152,10 +152,10 @@
   "connected_peers": "Pares conectados",
   "console": "Escritorio",
   "console_opened": "Consola aberta. Iniciado o rexistro...",
-  "contact_account_link": "O contacto enlaza á conta <strong>__account_id__</strong>.",
+  "contact_account_link": "O contacto enlaza á conta __account_id__.",
   "contact_name": "Nome de contacto",
   "contacts": "Contactos",
-  "contacts_local_storage_help": "<strong>Remember</strong>: Os contactos están gardados de forma local, e non na blockchain.",
+  "contacts_local_storage_help": "Remember: Os contactos están gardados de forma local, e non na blockchain.",
   "contacts_no_db_warning": "O seu navegador non soporta aceso á base de datos, sen o cal non é posible crear contactos.",
   "continue_forging": "Continuala forxa",
   "copy_account_id": "Copialo ID da conta",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Invalid ordinary payment.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "ID de vendedor non é válida",
-  "error_invalid_token": "O identificador é <strong>INVÁLIDO</strong>. Parece pertencer á conta __account_link__. Foi xerado no __timestamp__.",
+  "error_invalid_token": "O identificador é INVÁLIDO. Parece pertencer á conta __account_link__. Foi xerado no __timestamp__.",
   "error_issue_asset": "¡Produciuse un erro descoñecido! O activo pode que non se teña creado.",
   "error_max_amount_warning": "A cantidade é maior de __burst__ BURST. ¿Está seguro de que quere continuar? Faga clic de novo en Enviar para confirmar.",
   "error_max_asset_transfer_warning": "A cantidade especificada é maior de __qty__. ¿Seguro que desexa continuar? Faga clic no botón enviar para confirmar.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Forxado por vostede",
   "forged_fees_total": "Total de comisións forxadas",
   "forging": "Forxando",
-  "fork_warning": "<strong>Aviso</strong>: É probable que se atope nunha bifurcación (vostede ten forxado os últimos 10 bloques).",
+  "fork_warning": "Aviso: É probable que se atope nunha bifurcación (vostede ten forxado os últimos 10 bloques).",
   "form_warnings": "Avisos de Formulario",
   "form_warnings_help": "Prikaži upozorenje kad je iznos / naknada veća od ispod navedenog iznosa.",
   "free_memory": "Memoria libre",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Tutorial do interfaz",
   "is_scanning": "Está Escaneando",
   "issue_asset": "Emitir activo",
-  "issue_asset_warning": "<strong>Aviso</strong>: Unha vez enviada, nunca poderá cambiar esta información. Asegúrese de que é a correcta.",
+  "issue_asset_warning": "Aviso: Unha vez enviada, nunca poderá cambiar esta información. Asegúrese de que é a correcta.",
   "item_name": "Nome do artigo",
   "language": "Idioma",
   "last_block": "Derradeiro bloque",
@@ -583,7 +583,7 @@
   "no_polls_found": "Non se atoparon enquisas.",
   "no_products_found": "Non se atoparon artigos.",
   "no_products_listed_yet": "Aínda non se ten posto ningún artigo á venda, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>engada un.</a>",
-  "no_public_key_warning": "<strong>¡Aviso!</strong>: ¡ A súa conta non ten clave pública! Esto significa que non está protexida como outras contas. Debe realizar unha transacción de saída para arranxalo.",
+  "no_public_key_warning": "¡Aviso!: ¡ A súa conta non ten clave pública! Esto significa que non está protexida como outras contas. Debe realizar unha transacción de saída para arranxalo.",
   "no_purchased_products_found": "Non se atoparon artigos mercados.",
   "no_sell_orders_for_asset": "Non hai ordes de venda para este activo.",
   "no_trade_history": "Non hai historial de operacións dispoñibles.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Transacción analizada",
   "parse_transaction_bytes": "Analizar Bytes de Transacción",
   "passphrase": "Contrasinal",
-  "passphrase_disclosure_warning": "<strong>Atención</strong>: Nunca revele o seu contrasinal. ¡Se o perde, perderá o acceso a súa conta!",
+  "passphrase_disclosure_warning": "Atención: Nunca revele o seu contrasinal. ¡Se o perde, perderá o acceso a súa conta!",
   "passphrase_length_warning": "O seu contrasinal debe tener polo menos 35 caracteres de lonxitude.",
-  "passphrase_remote_warning": "<strong>Aviso</strong>: ¡O seu contrasinal será enviado ó servidor!",
+  "passphrase_remote_warning": "Aviso: ¡O seu contrasinal será enviado ó servidor!",
   "passphrase_required_to_decrypt_data": "Requírese o seu contrasinal para descifrar estos datos.",
-  "passphrase_warning": "<strong>Atención</strong>: O seu contrasinal é o que se interpón entre a súa conta e o resto do mundo. Non empregue ningunha frase con sentido, especialmente se aparece en literatura ou música. <br /><br />Nunca revele o seu contrasinal. ¡Se o perde, perderá o acceso a súa conta!",
+  "passphrase_warning": "Atención: O seu contrasinal é o que se interpón entre a súa conta e o resto do mundo. Non empregue ningunha frase con sentido, especialmente se aparece en literatura ou música. <br /><br />Nunca revele o seu contrasinal. ¡Se o perde, perderá o acceso a súa conta!",
   "passphrase_write_below": "¡O seu contrasinal é moi importante! Para estar seguro de que o ten gardado, por favor vólvao a escribir embaixo:",
   "password_required_for_decryption": "Requírese o seu contrasinal para descifrar estas mensaxes.",
   "payload": "Carga",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "A conta do destino non ten chave pública, o que significa que nunca realizou unha transacción de saída. A conta ten un saldo de __burst__ BURST. Por favor, verifique a conta de destino antes de facelo envío.",
   "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "Hai un problema coa conta de destino:",
-  "recipient_public_key_account": "The public key corresponds to account <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "A conta de destino é descoñecida, o que significa que nunca ten recibido ou emitido ninguna transacción. Por favor confirme a conta de destino antes de facelo envío.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. To submit this request you must supply the recipient public key also.",
@@ -729,7 +729,7 @@
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender __assetName__ por BURST",
-  "sell_order_description": "Vender <strong>__quantity__ activos __asset_name__</strong> a <strong>__burst__ BURST</strong> cada un.",
+  "sell_order_description": "Vender __quantity__ activos __asset_name__ a __burst__ BURST cada un.",
   "sell_order_description_help": "Por cada activo vendido recibirá __burst__ BURST, resultando nun total de __total_burst__ BURST unha vez se produza a venda total.",
   "sell_orders": "Ordes de Venda",
   "sell_to_anyone": "Vender a calquera",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Se quere comezar a forxar, escriba o seu contrasinal como confirmación.",
   "state": "Estado",
   "status": "Estado",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "A cadea de bloques estase descarregando. Por favor agarde ata que esté actualizada.",
   "status_blockchain_rescanning": "A cadea de bloques está sendo escaneada. Por favor, espere ata que finalice.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Detela forxa",
   "stop_forging_confirmation": "Se está seguro de que desexa detela forxa, faga clic no botón para confirmar.",
   "stop_forging_confirmation_passphrase": "Se está seguro de detela forxa, introduza o seu contrasinal para confirmar.",
@@ -831,8 +831,8 @@
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorías)",
   "tentative": "Tentativa",
-  "testnet_login_warning": "Inicie sesión coa súa conta da <strong>red de probas</strong> - ¡non coa súa conta real!</div>",
-  "testnet_warning": "<strong>Aviso</strong>: Está conectado á rede de probas. ¡Non utilice o seu contrasinal real!",
+  "testnet_login_warning": "Inicie sesión coa súa conta da red de probas - ¡non coa súa conta real!</div>",
+  "testnet_warning": "Aviso: Está conectado á rede de probas. ¡Non utilice o seu contrasinal real!",
   "theme_settings": "Axustes de tema",
   "time": "Hora",
   "timestamp": "Marca de tempo",
