--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Lanjutan",
   "alias": "Alias",
   "alias_account_help": "Alias akan referensi nomor rekening yang masuk dan dapat digunakan untuk mengirim BURST ke, pesan, dll..",
-  "alias_account_link": "Alias link ke rekening <strong>__account_id__</strong>",
+  "alias_account_link": "Alias link ke rekening __account_id__",
   "alias_account_no_link": "Alias tidak menautkan dengan akun. ",
   "alias_assignment": "Alias tugas",
   "alias_buy": "Membeli alias",
@@ -64,8 +64,8 @@
   "asset_decimals": "Aset desimal",
   "asset_decimals_help": "Maksimum yang diizinkan jumlah digit setelah titik desimal kuantitas aset.",
   "asset_exchange": "Aset Bertukar",
-  "asset_exchange_duplicates_warning": "<strong>Peringatan</strong>: ada 1 aset lainnya dengan nama yang sama dalam pertukaran aset. Harap konfirmasikan Anda telah memilih yang benar. Periksa account dan ID aset untuk konfirmasi.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Peringatan</strong>: Terdapat __count__ aset lainnya dengan nama yang sama dalam bursa aset. Pastikan Anda memilih aset yang tepat. Periksa rekening dan ID aset untuk konfirmasi.",
+  "asset_exchange_duplicates_warning": "Peringatan: ada 1 aset lainnya dengan nama yang sama dalam pertukaran aset. Harap konfirmasikan Anda telah memilih yang benar. Periksa account dan ID aset untuk konfirmasi.",
+  "asset_exchange_duplicates_warning_plural": "Peringatan: Terdapat __count__ aset lainnya dengan nama yang sama dalam bursa aset. Pastikan Anda memilih aset yang tepat. Periksa rekening dan ID aset untuk konfirmasi.",
   "asset_exchange_tutorial": "Petunjuk Bursa Aset",
   "asset_issuance": "Penerbitan Aset",
   "asset_minimum_fee_help": "Biaya minimum untuk mengeluarkan sebuah aset adalah 1.000 Burst.",
@@ -111,7 +111,7 @@
   "buy_alias": "Membeli Alias",
   "buy_asset_with_burst": "Beli __assetName__ dengan BURST",
   "buy_it_q": "Membelinya?",
-  "buy_order_description": "Menjual aset <strong>__quantity__ __asset_name__</strong> di <strong>__burst__ BURST</strong> masing-masing.",
+  "buy_order_description": "Menjual aset __quantity__ __asset_name__ di __burst__ BURST masing-masing.",
   "buy_order_description_help": "Per seluruh aset yang membeli Anda akan membayar __burst__ BURST, membuat total __total_burst__ BURST setelah segala sesuatu telah dibeli.",
   "buy_orders": "Membeli Pesanan",
   "buyer": "Pembeli",
@@ -152,10 +152,10 @@
   "connected_peers": "Sesama-sesama yang terhubung",
   "console": "Konsol",
   "console_opened": "Membuka konsol. Penebangan mulai...",
-  "contact_account_link": "Kontak link ke rekening <strong>__account_id__</strong>.",
+  "contact_account_link": "Kontak link ke rekening __account_id__.",
   "contact_name": "Nama kontak",
   "contacts": "Kontak",
-  "contacts_local_storage_help": "<strong>Ingat</strong>: Kontak disimpan secara lokal, bukan pada blockchain.",
+  "contacts_local_storage_help": "Ingat: Kontak disimpan secara lokal, bukan pada blockchain.",
   "contacts_no_db_warning": "Browser Anda tidak mendukung akses database, tanpa fungsi ini, kontak tidak dapat dibuat.",
   "continue_forging": "Lanjutkan Forging",
   "copy_account_id": "Salin ID catatan",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Pembayaran umum tidak sah.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "ID Penjual tidak valid",
-  "error_invalid_token": "Token ini <strong>TIDAK BERLAKU</strong>. Ini milik account__account_link__ akun. Dibuat pada __timestamp__.",
+  "error_invalid_token": "Token ini TIDAK BERLAKU. Ini milik account__account_link__ akun. Dibuat pada __timestamp__.",
   "error_issue_asset": "Terjadi kesalahan yang tidak dikenal! Aset mungkin atau mungkin tidak dibuat.",
   "error_max_amount_warning": "Jumlah lebih tinggi daripada __burst__ BURST. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
   "error_max_asset_transfer_warning": "Kuantitas yang ditetapkan lebih tinggi dari __qty__. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Terbuat oleh Anda",
   "forged_fees_total": "Jumlah biaya penyusunan",
   "forging": "Penyusunan",
-  "fork_warning": "<strong>Peringatan</strong>: Anda berada di fork (Anda telah membentuk 10 blok terakhir).",
+  "fork_warning": "Peringatan: Anda berada di fork (Anda telah membentuk 10 blok terakhir).",
   "form_warnings": "Bentuk peringatan",
   "form_warnings_help": "Tampilkan peringatan ketika jumlah biaya masuk lebih tinggi daripada yang tertulis di bawah ini.",
   "free_memory": "Memori belum terpakai",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Tutorial Antarmuka",
   "is_scanning": "Pemindaian",
   "issue_asset": "Masalah Aset",
-  "issue_asset_warning": "<strong>Peringatan</strong>: Setelah dikirim, anda tidak akan dapat mengubah informasi ini lagi, selamanya. Pastikan data yang dimasukkan benar.",
+  "issue_asset_warning": "Peringatan: Setelah dikirim, anda tidak akan dapat mengubah informasi ini lagi, selamanya. Pastikan data yang dimasukkan benar.",
   "item_name": "Nama Barang",
   "language": "Bahasa",
   "last_block": "Blok terakhir",
@@ -583,7 +583,7 @@
   "no_polls_found": "Ada jajak pemilihan ditemukan.",
   "no_products_found": "Tidak ada Produk yang ditemukan.",
   "no_products_listed_yet": "Anda belum terdaftar produk untuk dijual, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> menambahkan satu.</a>",
-  "no_public_key_warning": "<strong>Peringatan!</strong>: akun Anda tidak memiliki kunci umum! Ini berarti itu adalah tidak seperti yang dilindungi account lainnya. Anda harus membuat transaksi outgoing untuk memperbaiki masalah ini.",
+  "no_public_key_warning": "Peringatan!: akun Anda tidak memiliki kunci umum! Ini berarti itu adalah tidak seperti yang dilindungi account lainnya. Anda harus membuat transaksi outgoing untuk memperbaiki masalah ini.",
   "no_purchased_products_found": "Tidak ada produk yang dibeli telah ditemukan.",
   "no_sell_orders_for_asset": "Tidak menjual pesanan untuk aset ini.",
   "no_trade_history": "Sejarah perdagangan tidak tersedia.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Uraikan Transaksi",
   "parse_transaction_bytes": "Mengurai Byte Transaksi",
   "passphrase": "Password",
-  "passphrase_disclosure_warning": "<strong>Perhatian</strong>: tidak pernah mengungkapkan sandi. Jangan pernah mengungkapkan kata sandi Anda!",
+  "passphrase_disclosure_warning": "Perhatian: tidak pernah mengungkapkan sandi. Jangan pernah mengungkapkan kata sandi Anda!",
   "passphrase_length_warning": "Kata sandi harus setidaknya 35 karakter.",
-  "passphrase_remote_warning": "<strong>Peringatan</strong>: Kata sandi akan dikirim ke server!",
+  "passphrase_remote_warning": "Peringatan: Kata sandi akan dikirim ke server!",
   "passphrase_required_to_decrypt_data": "Sandi diperlukan untuk mendekripsi data ini.",
-  "passphrase_warning": "<strong>Perhatian</strong>: Sandi melindungi akun Anda dari pencuri. Di internet seluruh dunia kadang-kadang dapat melihat password Anda. Jangan gunakan kalimat terkenal, dari lagu atau sastra. Pilih sesuatu yang sangat sulit.<br /><br />Jangan memberitahu orang lain password Anda. Jika Anda kehilangan ini Anda kehilangan akses ke akun Anda!",
+  "passphrase_warning": "Perhatian: Sandi melindungi akun Anda dari pencuri. Di internet seluruh dunia kadang-kadang dapat melihat password Anda. Jangan gunakan kalimat terkenal, dari lagu atau sastra. Pilih sesuatu yang sangat sulit.<br /><br />Jangan memberitahu orang lain password Anda. Jika Anda kehilangan ini Anda kehilangan akses ke akun Anda!",
   "passphrase_write_below": "Sandi sangat penting! Untuk memeriksa Anda telah menyimpannya, silakan menulis sandi di bawah ini:",
   "password_required_for_decryption": "Sandi diperlukan untuk mengenkripsi pesan ini.",
   "payload": "Membayar beban",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "Rekening penerima tidak memiliki kunci umum, berarti itu tidak pernah memiliki transaksi outgoing. Account memiliki keseimbangan __burst__ BURST. Silakan periksa alamat penerima Anda sebelum mengirimkan.",
   "recipient_no_public_key_pka": "Rekening penerima tidak memiliki public key,  yang berarti rekening tersebut belum pernah memiliki transaksi keluar. Rekening tersebut memiliki saldo sebesar __burst__ BURST. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
   "recipient_problem": "Ada masalah dengan rekening penerima:",
-  "recipient_public_key_account": "Public key sesuai dengan rekening <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "Public key sesuai dengan rekening __account_id__.",
   "recipient_public_key_already_announced": "Public key rekening ini telah diumumkan. Gunakan ID rekening.",
   "recipient_unknown": "Akun penerima adalah rekening yang tidak diketahui. Ini tidak pernah memiliki transaksi masuk atau keluar. Silahkan mengecek alamat penerima sebelum mengirimkan.",
   "recipient_unknown_pka": "Rekening penerima tidak diketahui, yang berarti rekening tersebut belum pernah memiliki transaksi masuk atau keluar. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
@@ -729,7 +729,7 @@
   "sell": "Menjual",
   "sell_alias": "Menjual Alias",
   "sell_asset_for_burst": "Jual __assetName__ untuk BURST",
-  "sell_order_description": "Menjual aset <strong>__quantity__ __asset_name__</strong> di <strong>__burst__ BURST</strong> masing-masing.",
+  "sell_order_description": "Menjual aset __quantity__ __asset_name__ di __burst__ BURST masing-masing.",
   "sell_order_description_help": "Per seluruh aset yang dijual Anda akan menerima __burst__ BURST, membuat total __total_burst__ BURST setelah semuanya telah terjual.",
   "sell_orders": "Menjual Pesanan",
   "sell_to_anyone": "Menjual kepada siapa pun",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Jika Anda ingin mulai membentuk, ketik sandi untuk mengkonfirmasi.",
   "state": "Negara",
   "status": "Status",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain sedang diunduh. Tunggu sampai selesai.",
   "status_blockchain_rescanning": "Blockchain saat ini rescanning. Tunggu hingga yang telah selesai.",
-  "status_new_account": "Selamat datang di rekening BURST baru anda. ID rekening anda adalah <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Selamat datang di rekening BURST baru anda. ID rekening anda adalah __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Berhenti penyusunan",
   "stop_forging_confirmation": "Jika Anda yakin Anda ingin berhenti penyusunan, klik tombol di bawah ini untuk mengkonfirmasi.",
   "stop_forging_confirmation_passphrase": "Jika Anda yakin Anda ingin berhenti pembentukan, ketik sandi untuk mengkonfirmasi.",
@@ -831,8 +831,8 @@
   "tags": "Tag",
   "tags_categories": "Tag (kategori)",
   "tentative": "Tentatif",
-  "testnet_login_warning": "Login dengan akun <strong>TestNet</strong> - tidak satu Anda nyata!</div>",
-  "testnet_warning": "<strong>Peringatan</strong>: Anda terhubung ke TestNet. Jangan gunakan sandi yang nyata!",
+  "testnet_login_warning": "Login dengan akun TestNet - tidak satu Anda nyata!</div>",
+  "testnet_warning": "Peringatan: Anda terhubung ke TestNet. Jangan gunakan sandi yang nyata!",
   "theme_settings": "Pokok Pengaturan",
   "time": "Waktu",
   "timestamp": "Timestamp",
