--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Pažangus",
   "alias": "Pseudonimas",
   "alias_account_help": "Pseudonimas bus surištas su sąskaitos numeriu ir gali būti naudojamas siųsti BURST, žinutes ir t.t...",
-  "alias_account_link": "Pseudonimas susietas su <strong>__account_id__</strong>",
+  "alias_account_link": "Pseudonimas susietas su __account_id__",
   "alias_account_no_link": "Pseudonimas neturi ryšio su sąskaita. ",
   "alias_assignment": "Pseudonimo priskyrimas",
   "alias_buy": "Pseudonimo pirkimas",
@@ -64,8 +64,8 @@
   "asset_decimals": "Aktyvo dešimtainiai",
   "asset_decimals_help": "Maksimalus leidžiamas aktyvo skaitmenų skaičius po kablelio.",
   "asset_exchange": "Birža",
-  "asset_exchange_duplicates_warning": "<strong>Įspėjimas</strong>: Biržoje egzistuoja aktyvas su tokiu pačiu pavadinimu. Prašome įsitikinti, jog pasirinkote teisingą aktyvą patikrinę sąskaitos ir aktyvo ID.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Įspėjimas</strong>: Biržoje egzistuoja aktyvas su tokiu pačiu pavadinimu. Prašome įsitikinti, jog pasirinkote teisingą aktyvą patikrinę sąskaitos ir aktyvo ID.",
+  "asset_exchange_duplicates_warning": "Įspėjimas: Biržoje egzistuoja aktyvas su tokiu pačiu pavadinimu. Prašome įsitikinti, jog pasirinkote teisingą aktyvą patikrinę sąskaitos ir aktyvo ID.",
+  "asset_exchange_duplicates_warning_plural": "Įspėjimas: Biržoje egzistuoja aktyvas su tokiu pačiu pavadinimu. Prašome įsitikinti, jog pasirinkote teisingą aktyvą patikrinę sąskaitos ir aktyvo ID.",
   "asset_exchange_tutorial": "Aktyvų biržos naudotojo vadovas",
   "asset_issuance": "Aktyvo išleidimas",
   "asset_minimum_fee_help": "Minimalus mokestis už išleidžiamą aktyvą yra 1,000 Burst.",
@@ -111,7 +111,7 @@
   "buy_alias": "Pirkti pseudonimą",
   "buy_asset_with_burst": "Pirkti __assetName__ su BURST",
   "buy_it_q": "Pirkti?",
-  "buy_order_description": "Pirkti <strong>__quantity__ __asset_name__</strong> aktyvus po <strong>__burst__ BURST</strong> už kiekvieną.",
+  "buy_order_description": "Pirkti __quantity__ __asset_name__ aktyvus po __burst__ BURST už kiekvieną.",
   "buy_order_description_help": "Pirkdami visą aktyvą mokėsite __burst__ BURST, o iš viso − __total_burst__ BURST, kai visas nupirksite.",
   "buy_orders": "Pirkimo užsakymai",
   "buyer": "Pirkėjas",
@@ -152,10 +152,10 @@
   "connected_peers": "Prijungti tinklo taškai",
   "console": "Konsolė",
   "console_opened": "Konsolė atidaryta. Stebėjimas prasidėjo...",
-  "contact_account_link": "Kontakto sąskaitos numeris <strong>__account_id__</strong>.",
+  "contact_account_link": "Kontakto sąskaitos numeris __account_id__.",
   "contact_name": "Kontakto pavadinimas",
   "contacts": "Kontaktai",
-  "contacts_local_storage_help": "<strong>Atminkite</strong>: Kontaktai saugomi kompiuteryje, o ne viešoje blokų grandinėje.",
+  "contacts_local_storage_help": "Atminkite: Kontaktai saugomi kompiuteryje, o ne viešoje blokų grandinėje.",
   "contacts_no_db_warning": "Jūsų naršyklė nepalaiko prieigos prie duomenų bazės. Be jos negalima sukurti kontaktų.",
   "continue_forging": "Tęsti \"kalimą",
   "copy_account_id": "Kopijuoti sąskaitos ID",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Netinkamas paprastas mokėjimas.",
   "error_invalid_referenced_transaction_hash": "Netinkamas nurodytos transakcijos \"hash\".",
   "error_invalid_seller": "Neleistinas pardavėjo ID",
-  "error_invalid_token": "Atpažinimo ženklas yra <strong>NELEISTINAS</strong>. Atrodo, kad jis priklauso sąskaitai __account_link__. Jis buvo sukurtas  __timestamp__.",
+  "error_invalid_token": "Atpažinimo ženklas yra NELEISTINAS. Atrodo, kad jis priklauso sąskaitai __account_link__. Jis buvo sukurtas  __timestamp__.",
   "error_issue_asset": "Įvyko nežinoma klaida! Aktyvas gali arba negali būti sukurtas.",
   "error_max_amount_warning": "Jūs suma yra didesnė už __burst__ BURST. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
   "error_max_asset_transfer_warning": "Nurodytas kiekis yra didesnis nei __qty__. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Jūsų \"iškalti",
   "forged_fees_total": "Iškalta\" viso mokesčių",
   "forging": "Kalimas\" vyksta",
-  "fork_warning": "<strong>Įspėjimas</strong>: labiausiai tikėtinai Jūs esate ne toje blokų grandinėje (\"iškalėte\" 10 paskutinių blokų).",
+  "fork_warning": "Įspėjimas: labiausiai tikėtinai Jūs esate ne toje blokų grandinėje (\"iškalėte\" 10 paskutinių blokų).",
   "form_warnings": "Suformuoti įspėjimus",
   "form_warnings_help": "Rodyti perspėjimą, kai įvesta suma / mokestis yra didesnis nei nurodyta žemiau.",
   "free_memory": "Laisva atmintis",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Sąsaja naudotojo vadovas",
   "is_scanning": "Vyksta skenavimas",
   "issue_asset": "Išleisti aktyvą",
-  "issue_asset_warning": "<strong>Įspėjimas</strong>: perdavus, Jūs negalėsite pakeisti šios informacijos dar kartą. Įsitikinkite, kad ji yra teisinga.",
+  "issue_asset_warning": "Įspėjimas: perdavus, Jūs negalėsite pakeisti šios informacijos dar kartą. Įsitikinkite, kad ji yra teisinga.",
   "item_name": "Prekės pavadinimas",
   "language": "Kalba",
   "last_block": "Paskutinis blokas",
@@ -583,7 +583,7 @@
   "no_polls_found": "Nerasta apklausų.",
   "no_products_found": "Prekių nerasta.",
   "no_products_listed_yet": "Jūs dar neturite produktų pardavimui, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> pridėkite juos.</a>",
-  "no_public_key_warning": "<strong>Įspėjimas!</strong>: Jūsų sąskaita neturi viešojo rakto! Tai reiškia, ji nėra apsaugota kaip kitos sąskaitos. Jūs turite padaryti išeinančią transakciją, kad išspręstumėte šią problemą.",
+  "no_public_key_warning": "Įspėjimas!: Jūsų sąskaita neturi viešojo rakto! Tai reiškia, ji nėra apsaugota kaip kitos sąskaitos. Jūs turite padaryti išeinančią transakciją, kad išspręstumėte šią problemą.",
   "no_purchased_products_found": "Nerasta įsigytų produktų.",
   "no_sell_orders_for_asset": "Nėra šio aktyvo pardavimo užsakymų.",
   "no_trade_history": "Prekybos istorijos nėra.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Apdoroti transakciją",
   "parse_transaction_bytes": "Parse Transaction Bytes",
   "passphrase": "Prieigos slaptažodis",
-  "passphrase_disclosure_warning": "<strong>Dėmesio</strong>: niekada neatskleiskite savo slaptažodžio. Jei jį prarasite, prarasite ir prieigą prie savo sąskaitos!",
+  "passphrase_disclosure_warning": "Dėmesio: niekada neatskleiskite savo slaptažodžio. Jei jį prarasite, prarasite ir prieigą prie savo sąskaitos!",
   "passphrase_length_warning": "Jūsų slaptažodis turi būti ne mažiau kaip 35 simboliai.",
-  "passphrase_remote_warning": "<strong>Įspėjimas</strong>: jūsų slaptažodis bus išsiųstas į serverį!",
+  "passphrase_remote_warning": "Įspėjimas: jūsų slaptažodis bus išsiųstas į serverį!",
   "passphrase_required_to_decrypt_data": "Norint iššifruoti šiuos duomenis, reikalingas Jūsų slaptažodis.",
-  "passphrase_warning": "<strong>Dėmesio</strong>: slaptažodis yra viskas, kas stovi tarp Jūsų sąskaitos ir pasaulio. Nenaudokite standartinių sakinių, ypač jei jie yra iš dainos ar literatūros. < br / > < br / >Niekada neatskleiskite savo slaptažodžio. Jei jį prarasite, prarasite ir prieigą prie savo sąskaitos!",
+  "passphrase_warning": "Dėmesio: slaptažodis yra viskas, kas stovi tarp Jūsų sąskaitos ir pasaulio. Nenaudokite standartinių sakinių, ypač jei jie yra iš dainos ar literatūros. < br / > < br / >Niekada neatskleiskite savo slaptažodžio. Jei jį prarasite, prarasite ir prieigą prie savo sąskaitos!",
   "passphrase_write_below": "Jūsų slaptažodis yra labai svarbus! Siekiant įsitikinti, kad jį išsaugojote, prašome įrašyti savo slaptažodį žemiau:",
   "password_required_for_decryption": "Norint iššifruoti šiuos pranešimus, reikalingas Jūsų slaptažodis.",
   "payload": "Payload",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, kad ji niekada neturėjo išeinančių transakcijų. Sąskaitoje yra __burst__ BURST. Prašome patikrinkite savo gavėjo adresą prieš pateikdami.",
   "recipient_no_public_key_pka": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, niekada neturėjo išeinančios transakcijos. Sąskaitos balansas yra __burst__ BURST. Norint pateikti prašymą turite pateikti taip pat ir gavėjo viešąjį raktą.",
   "recipient_problem": "Yra problema su gavėjo sąskaita:",
-  "recipient_public_key_account": "Viešasis raktas atitinka <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "Viešasis raktas atitinka __account_id__.",
   "recipient_public_key_already_announced": "Šios sąskaitos viešasis raktas jau paskelbtas. Naudokite sąskaitos ID.",
   "recipient_unknown": "Gavėjo sąskaita yra nežinomą sąskaita, tai reiškia, niekada neturėjo jokios transakcijos. Prašome patikrinkite savo gavėjo adresą prieš pateikdami.",
   "recipient_unknown_pka": "Gavėjo sąskaita yra nežinoma, tai reiškia, ji niekada neturėjo įeinančios ar išeinančios transakcijos. Norint pateikti šį prašymą, turite taip pat pateikti gavėjo viešąjį raktą.",
@@ -729,7 +729,7 @@
   "sell": "Parduoti",
   "sell_alias": "Parduoti pseudonimą",
   "sell_asset_for_burst": "Parduoti __assetName__ už BURST",
-  "sell_order_description": "Parduoti <strong>__quantity__ __asset_name__</strong> aktyvus po <strong>__burst__ BURST</strong> už kiekvieną.",
+  "sell_order_description": "Parduoti __quantity__ __asset_name__ aktyvus po __burst__ BURST už kiekvieną.",
   "sell_order_description_help": "Už visą parduotą aktyvą Jūs gausite __burst__ BURST, o iš viso − __total_burst__ BURST, kai viskas bus parduota.",
   "sell_orders": "Pardavimo užsakymai",
   "sell_to_anyone": "Parduoti visiems",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Jei norite pradėti \"kalimą\", įveskite savo slaptažodį patvirtinimui.",
   "state": "Būsena",
   "status": "Būsena",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blokai šiuo metu yra atsisiunčiami. Palaukite, kol jie atsinaujins iki dabartinės datos.",
   "status_blockchain_rescanning": "Blokai šiuo metu perskenuojami. Palaukite, kol baigs.",
-  "status_new_account": "Sveiki atvykę į savo naują BURST sąskaitą. Jūsų sąskaitos numeris yra <strong>__account_id__</strong>.",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Sveiki atvykę į savo naują BURST sąskaitą. Jūsų sąskaitos numeris yra __account_id__.",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Stabdyti \"kalimą",
   "stop_forging_confirmation": "Jei tikrai norite sustabdyti \"kalima\", norėdami tai patvirtinti, spustelėkite mygtuką žemiau.",
   "stop_forging_confirmation_passphrase": "Jei tikrai norite sustabdyti \"kalimą\", įveskite savo slaptažodį patvirtinimui.",
@@ -831,8 +831,8 @@
   "tags": "Žymos",
   "tags_categories": "Žymos (kategorijos)",
   "tentative": "Bandomasis",
-  "testnet_login_warning": "Prisijungti su savo <strong>TestNet</strong> sąskaita - nenaudokite Jūsų realios sąskaitos!</div>",
-  "testnet_warning": "<strong>Įspėjimas</strong>: jūs esate prisijungę prie to TestNet. Nenaudokite savo realaus slaptažodžio!",
+  "testnet_login_warning": "Prisijungti su savo TestNet sąskaita - nenaudokite Jūsų realios sąskaitos!</div>",
+  "testnet_warning": "Įspėjimas: jūs esate prisijungę prie to TestNet. Nenaudokite savo realaus slaptažodžio!",
   "theme_settings": "Stiliaus parametrai",
   "time": "Laikas",
   "timestamp": "Laiko Žymos",
