--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Avançado",
   "alias": "Álias",
   "alias_account_help": "O alias fará referência ao número de conta digitado e pode ser usado para enviar BURST, mensagens, etc..",
-  "alias_account_link": "O alias conecta com a conta <strong>__account_id__</strong>",
+  "alias_account_link": "O alias conecta com a conta __account_id__",
   "alias_account_no_link": "O alias não vincula a nenhuma conta. ",
   "alias_assignment": "Atribuição de Alias",
   "alias_buy": "Comprar Alias",
@@ -64,8 +64,8 @@
   "asset_decimals": "Decimais do Ativo",
   "asset_decimals_help": "O número máximo permitido de dígitos após o ponto decimal na quantidade de ativos.",
   "asset_exchange": "Intercâmbio de Ativos",
-  "asset_exchange_duplicates_warning": "<strong>Aviso</strong>: Há outro ativo com o mesmo nome no intercâmbio de ativos. Por favor, assegure-se de escolher o correto. Consulte o ID de conta e de ativo como confirmação.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Aviso</strong>: Há outros __count__ ativos com o mesmo nome no intercâmbio de ativos. Por favor, assegure-se de escolher o correto. Consulte o ID de conta e de ativo como confirmação.",
+  "asset_exchange_duplicates_warning": "Aviso: Há outro ativo com o mesmo nome no intercâmbio de ativos. Por favor, assegure-se de escolher o correto. Consulte o ID de conta e de ativo como confirmação.",
+  "asset_exchange_duplicates_warning_plural": "Aviso: Há outros __count__ ativos com o mesmo nome no intercâmbio de ativos. Por favor, assegure-se de escolher o correto. Consulte o ID de conta e de ativo como confirmação.",
   "asset_exchange_tutorial": "Tutorial do Intercâmbio de Ativos",
   "asset_issuance": "Emissão de Ativos",
   "asset_minimum_fee_help": "A taxa mínima para a emissão de um ativo é 1.000 Burst.",
@@ -111,7 +111,7 @@
   "buy_alias": "Comprar alias",
   "buy_asset_with_burst": "Comprar __assetName__ com BURST",
   "buy_it_q": "Comprar?",
-  "buy_order_description": "Comprar <strong>__quantity__ __asset_name__</strong>  ativos a <strong>__burst__ BURST</strong> cada.",
+  "buy_order_description": "Comprar __quantity__ __asset_name__  ativos a __burst__ BURST cada.",
   "buy_order_description_help": "Por cada ativo comprado você vai pagar __burst__ BURST, perfazendo um total de __total_burst__ BURST, uma vez que tudo for comprado.",
   "buy_orders": "Ordens de Compra",
   "buyer": "Comprador",
@@ -152,10 +152,10 @@
   "connected_peers": "Pares Conectados",
   "console": "Consola",
   "console_opened": "Consola aberta. Iniciado o registro...",
-  "contact_account_link": "O contato enlaça para a conta <strong>__account_id__</strong>.",
+  "contact_account_link": "O contato enlaça para a conta __account_id__.",
   "contact_name": "Nome de Contato",
   "contacts": "Contatos",
-  "contacts_local_storage_help": "<strong>Lembre</strong>: Os contatos armazenam-se localmente, não na corrente de blocos.",
+  "contacts_local_storage_help": "Lembre: Os contatos armazenam-se localmente, não na corrente de blocos.",
   "contacts_no_db_warning": "Seu navegador não suporta acesso ao banco de dados, sem o qual não é possível criar contatos.",
   "continue_forging": "Continuar a Forjar",
   "copy_account_id": "Copiar ID da Conta",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Pagamento ordinário não válido.",
   "error_invalid_referenced_transaction_hash": "Hash de transação referenciado não válido.",
   "error_invalid_seller": "ID do Vendedor Inválido",
-  "error_invalid_token": "O identificador <strong>não é válido</strong>. Parece pertencer à conta __account_link__. Foi gerado em __timestamp__.",
+  "error_invalid_token": "O identificador não é válido. Parece pertencer à conta __account_link__. Foi gerado em __timestamp__.",
   "error_issue_asset": "Ocorreu um erro desconhecido! O ativo pode ter sido criado ou não.",
   "error_max_amount_warning": "O montante é maior do que __burst__ BURST. Tem certeza que deseja continuar? Clique em Enviar novamente para confirmar.",
   "error_max_asset_transfer_warning": "A quantidade especificada é maior do que __qty__. Tem certeza que deseja continuar? Clique no botão Enviar novamente para confirmar.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Forjado por Você",
   "forged_fees_total": "Total de Taxas Forjadas",
   "forging": "Forjando",
-  "fork_warning": "<strong>Aviso</strong>: É provável que se encontre numa bifurcação (você forjou os últimos 10 blocos).",
+  "fork_warning": "Aviso: É provável que se encontre numa bifurcação (você forjou os últimos 10 blocos).",
   "form_warnings": "Avisos do Formulário",
   "form_warnings_help": "Mostrar um aviso quando a quantidade/taxa introduzida é maior do que a especificada cá.",
   "free_memory": "Memória livre",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Tutorial do interface",
   "is_scanning": "Escaneando",
   "issue_asset": "Emitir Ativo",
-  "issue_asset_warning": "<strong>Aviso</strong>: Uma vez enviado, você não será capaz de alterar essas informações, nunca mais. Verifique se está correcto.",
+  "issue_asset_warning": "Aviso: Uma vez enviado, você não será capaz de alterar essas informações, nunca mais. Verifique se está correcto.",
   "item_name": "Nome do Artigo",
   "language": "Idioma",
   "last_block": "Último Bloco",
@@ -583,7 +583,7 @@
   "no_polls_found": "Não se encontraram enquetes.",
   "no_products_found": "Nenhum produto encontrado.",
   "no_products_listed_yet": "Ainda não colocou artigo nenhum à venda, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>adicione um.</a>",
-  "no_public_key_warning": "<strong>Aviso!</strong>: a sua conta não tem chave pública! Isto significa que ela não é tão protegida como outras contas. Você deve fazer uma transação de saída para corrigir este problema.",
+  "no_public_key_warning": "Aviso!: a sua conta não tem chave pública! Isto significa que ela não é tão protegida como outras contas. Você deve fazer uma transação de saída para corrigir este problema.",
   "no_purchased_products_found": "Não se encontraram artigos comprados.",
   "no_sell_orders_for_asset": "Não há ordens de venda para este ativo.",
   "no_trade_history": "Não há história de operações disponível.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Analisar Transação",
   "parse_transaction_bytes": "Analisar Bytes de Transação",
   "passphrase": "Senha",
-  "passphrase_disclosure_warning": "<strong>Atenção</strong>: jamais revele a sua senha. Se você a perde, você perderá o acesso à sua conta!",
+  "passphrase_disclosure_warning": "Atenção: jamais revele a sua senha. Se você a perde, você perderá o acesso à sua conta!",
   "passphrase_length_warning": "A sua senha deve ter pelo menos 35 caracteres.",
-  "passphrase_remote_warning": "<strong>Atenção</strong>: a sua senha será enviada para o servidor!",
+  "passphrase_remote_warning": "Atenção: a sua senha será enviada para o servidor!",
   "passphrase_required_to_decrypt_data": "Necessita-se a sua senha para decifrar estes dados.",
-  "passphrase_warning": "<strong>Atenção</strong>: A senha é tudo que tem entre a sua conta e o resto do mundo. Não utilize qualquer frase com significado, especialmente qualquer uma que aparece na música ou literatura. <br /><br /> Jamais divulgue a sua senha. Se você a perde, você perderá o acesso à sua conta!",
+  "passphrase_warning": "Atenção: A senha é tudo que tem entre a sua conta e o resto do mundo. Não utilize qualquer frase com significado, especialmente qualquer uma que aparece na música ou literatura. <br /><br /> Jamais divulgue a sua senha. Se você a perde, você perderá o acesso à sua conta!",
   "passphrase_write_below": "A sua senha é muito importante! Para ter certeza de que você a guardou, por favor, digite novamente a sua senha abaixo:",
   "password_required_for_decryption": "Necessita-se a sua senha para decifrar estas mensagens.",
   "payload": "Carga",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "A conta do destinatário não tem chave pública, ou seja, nunca houve uma transação de saída desta conta. A conta tem o saldo de __burst__ BURST. Por favor verifique o endereço do seu destinatário antes de enviar.",
   "recipient_no_public_key_pka": "A conta de destino não tem chave pública, o que significa que nunca enviou trasação nenhuma. A conta tem um saldo de  __burst__ BURST. Para fazer este envio, também deve fornecer a chave pública da conta de destino.",
   "recipient_problem": "Há um problema com a conta de destino:",
-  "recipient_public_key_account": "A chave pública corresponde à conta <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "A chave pública corresponde à conta __account_id__.",
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Empregue a ID de conta no seu lugar.",
   "recipient_unknown": "A conta de destino é desconhecida, o que significa que nunca recebeu nem enviou nenhuma transação. Por favor, confirme a conta de destino antes de enviar.",
   "recipient_unknown_pka": "A conta de destino é uma conta desconhecida, o que significa que nunca recebeu nem enviou transação nenhuma. Para fazer este envio, deve fornecer também a chave pública da conta de destino.",
@@ -729,7 +729,7 @@
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender __assetName__ por BURST",
-  "sell_order_description": "Vender <strong>__quantity__ __asset_name__</strong> ativos a <strong>__burst__ BURST</strong> cada.",
+  "sell_order_description": "Vender __quantity__ __asset_name__ ativos a __burst__ BURST cada.",
   "sell_order_description_help": "Por cada ativo vendido, você receberá __burst__ BURST, resultando um total de __total_burst__ BURST, uma vez que tudo for vendido.",
   "sell_orders": "Ordens de Venda",
   "sell_to_anyone": "Vender a Qualquer",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Se você quer começar a forjar, digite a sua senha como confirmação.",
   "state": "Estado",
   "status": "Estado",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "O blockchain está sendo descarregado. Por favor aguarde até se atualizar.",
   "status_blockchain_rescanning": "A corrente de blocos está sendo reescaneada. Por favor, aguarde até finalizar.",
-  "status_new_account": "Bem vindo à sua nova conta BURST. O seu ID de conta é  <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Bem vindo à sua nova conta BURST. O seu ID de conta é  __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Deter Forjamento",
   "stop_forging_confirmation": "Se tiver certeza de que deseja parar o forjamento, clique no botão abaixo para confirmar.",
   "stop_forging_confirmation_passphrase": "Se tiver certeza de que deseja parar o forjamento, digite a sua senha para confirmar.",
@@ -831,8 +831,8 @@
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorias)",
   "tentative": "Tentativa",
-  "testnet_login_warning": "Inicie sessão com a sua conta da <strong>Rede de Provas</strong>, não com a conta real!</div>",
-  "testnet_warning": "<strong>Aviso</strong>: você está conectado à Rede de Provas. Não use a sua senha real!",
+  "testnet_login_warning": "Inicie sessão com a sua conta da Rede de Provas, não com a conta real!</div>",
+  "testnet_warning": "Aviso: você está conectado à Rede de Provas. Não use a sua senha real!",
   "theme_settings": "Configurações de Tema",
   "time": "Hora",
   "timestamp": "Marca de Tempo",
