--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -634,7 +634,7 @@
   "passphrase_length_warning": "Parola ta de acces trebuie să aibă cel puţin 35 de caractere.",
   "passphrase_remote_warning": "Parola ta de autentificare va fi trimisă la server!",
   "passphrase_required_to_decrypt_data": "Parola ta de acces este necesară pentru a decripta aceste date.",
-  "passphrase_warning": "<strong>Attention</strong>: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
+  "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Parloa ta este foarte importantă! Pentru a fi sigur că ai salvat-o, te rugăm să o scrii din nou mai jos: ",
   "password_required_for_decryption": "Este necesară parola ta de acces pentru a decripta aceste mesaje.",
   "payload": "Capacitate utilă",
