--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Дополнительно",
   "alias": "Псевдоним",
   "alias_account_help": "Псевдоним будет ссылаться на введенный номер аккаунта и может использоваться для отправки BURST, сообщений, и т.д..",
-  "alias_account_link": "Этот Псевдоним принадлежит аккаунту <strong>__account_id__</strong>",
+  "alias_account_link": "Этот Псевдоним принадлежит аккаунту __account_id__",
   "alias_account_no_link": "Псевдоним не принадлежит учетной записи. ",
   "alias_assignment": "Псевдоним присвоен",
   "alias_buy": "Купить псевдоним",
@@ -64,8 +64,8 @@
   "asset_decimals": "Десятичные части Актива",
   "asset_decimals_help": "Максимально допустимое количество цифр после десятичной запятой для указания количества актива.",
   "asset_exchange": "Биржа активов",
-  "asset_exchange_duplicates_warning": "<strong>Предупреждение</strong>: На бирже активов, есть еще 1 другой актив, с тем же именем. Пожалуйста, убедитесь, что вы выбрали правильный. Посмотрите на ID аккаунта и актива для подтверждения.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Предупреждение</strong>: На бирже активов есть еще __count__ других активов, с тем же именем. Пожалуйста, убедитесь, что выбран правильный актив. Посмотрите на ID  аккаунта и актива для подтверждения.",
+  "asset_exchange_duplicates_warning": "Предупреждение: На бирже активов, есть еще 1 другой актив, с тем же именем. Пожалуйста, убедитесь, что вы выбрали правильный. Посмотрите на ID аккаунта и актива для подтверждения.",
+  "asset_exchange_duplicates_warning_plural": "Предупреждение: На бирже активов есть еще __count__ других активов, с тем же именем. Пожалуйста, убедитесь, что выбран правильный актив. Посмотрите на ID  аккаунта и актива для подтверждения.",
   "asset_exchange_tutorial": "Учебник по работе с Биржей Активов",
   "asset_issuance": "Выпуск актива",
   "asset_minimum_fee_help": "Минимальная комиссия за выпуск актива составляет 1000 Burst.",
@@ -111,7 +111,7 @@
   "buy_alias": "Купить псевдоним",
   "buy_asset_with_burst": "Купить __assetName__ за BURST",
   "buy_it_q": "Купить?",
-  "buy_order_description": "Купить  <strong>__quantity__ __asset_name__</strong>  актив за  <strong>__burst__ BURST</strong> каждый.",
+  "buy_order_description": "Купить  __quantity__ __asset_name__  актив за  __burst__ BURST каждый.",
   "buy_order_description_help": "За купленный целый актив вы заплатите __burst__ BURST, заплатив в общей сложности __total_burst__ BURST при покупке всего объема актива.",
   "buy_orders": "Ордера на покупку",
   "buyer": "Покупатель",
@@ -152,10 +152,10 @@
   "connected_peers": "Подключенные узлы",
   "console": "Консоль",
   "console_opened": "Консоль открыта. Логирование началось...",
-  "contact_account_link": "Контакт связан с аккаунтом <strong>__account_id__</strong>.",
+  "contact_account_link": "Контакт связан с аккаунтом __account_id__.",
   "contact_name": "Имя контакта",
   "contacts": "Контакты",
-  "contacts_local_storage_help": "<strong>Запомните</strong>: контакты хранятся локально, а не в blockchain.",
+  "contacts_local_storage_help": "Запомните: контакты хранятся локально, а не в blockchain.",
   "contacts_no_db_warning": "Ваш браузер не поддерживает доступ к базе данных, без чего не могут создаваться контакты.",
   "continue_forging": "Продолжить форжинг",
   "copy_account_id": "Скопировать ID аккаунта",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Недействительный платеж.",
   "error_invalid_referenced_transaction_hash": "Неверный хэш зависимой транзакции.",
   "error_invalid_seller": "Недопустимый ID продавца",
-  "error_invalid_token": "Токен <strong>НЕ ДЕЙСТВИТЕЛЕН</strong>. По предоставленной информации, он принадлежит аккаунту  __account_link__ . Он был создан  __timestamp__.",
+  "error_invalid_token": "Токен НЕ ДЕЙСТВИТЕЛЕН. По предоставленной информации, он принадлежит аккаунту  __account_link__ . Он был создан  __timestamp__.",
   "error_issue_asset": "Произошла неизвестная ошибка! Актив может быть создан или не создан.",
   "error_max_amount_warning": "Ваша сумма больше чем __burst__ BURST. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
   "error_max_asset_transfer_warning": "Указанное количество превышает __qty__. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Сфоржено вами",
   "forged_fees_total": "Всего нафоржено комиссии",
   "forging": "Форжинг",
-  "fork_warning": "<strong>Предупреждение</strong>: вы скорее всего на ветвлении (вы сфоржили последние 10 блоков).",
+  "fork_warning": "Предупреждение: вы скорее всего на ветвлении (вы сфоржили последние 10 блоков).",
   "form_warnings": "Формы предупреждений",
   "form_warnings_help": "Показывать предупреждение, когда введенные сумма / комиссия выше чем указано ниже.",
   "free_memory": "Свободная память",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Описание интерфейса",
   "is_scanning": "Идет Сканирование",
   "issue_asset": "Выпустить Актив",
-  "issue_asset_warning": "<strong>Предупреждение</strong>: После того как вы введете данные, вы не сможете изменить эту информацию снова. Убедитесь, что все данные введены правильно.",
+  "issue_asset_warning": "Предупреждение: После того как вы введете данные, вы не сможете изменить эту информацию снова. Убедитесь, что все данные введены правильно.",
   "item_name": "Название элемента",
   "language": "Язык",
   "last_block": "Последний Блок",
@@ -583,7 +583,7 @@
   "no_polls_found": "Опросов не найдено.",
   "no_products_found": "Товары не найдены.",
   "no_products_listed_yet": "Вы еще не опубликовали товары для продажи, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> добавить один.</a>",
-  "no_public_key_warning": "<strong>Предупреждение!</strong>: ваш аккаунт не имеет открытого ключа! Это означает, что ваш аккаунт не защищен должным образом. Вы должны сделать хотя бы одну исходящую транзакцию, чтобы исправить эту проблему.",
+  "no_public_key_warning": "Предупреждение!: ваш аккаунт не имеет открытого ключа! Это означает, что ваш аккаунт не защищен должным образом. Вы должны сделать хотя бы одну исходящую транзакцию, чтобы исправить эту проблему.",
   "no_purchased_products_found": "Купленные товары не найдены .",
   "no_sell_orders_for_asset": "Нет заявок на продажу этого актива.",
   "no_trade_history": "История торговли не доступна.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Анализировать Транзакцию",
   "parse_transaction_bytes": "Парсинг байтов транзакции",
   "passphrase": "Парольная фраза",
-  "passphrase_disclosure_warning": "<strong>Внимание</strong>: никогда не раскрывать свою секретную фразу. Если вы его потеряете вы потеряете доступ к вашей учетной записи!",
+  "passphrase_disclosure_warning": "Внимание: никогда не раскрывать свою секретную фразу. Если вы его потеряете вы потеряете доступ к вашей учетной записи!",
   "passphrase_length_warning": "Ваш пароль должен быть не менее 35 символов.",
-  "passphrase_remote_warning": "<strong>Предупреждение</strong>: ваш пароль будет отправлен на сервер!",
+  "passphrase_remote_warning": "Предупреждение: ваш пароль будет отправлен на сервер!",
   "passphrase_required_to_decrypt_data": "Ваш пароль требуется для расшифровки этих данных.",
-  "passphrase_warning": "<strong>Внимание</strong>: парольная фраза-это все, что стоит между вашей учетной записи и остальной частью мира. Не используйте какие либо известные фразы и предложения, особенно тексты песен или отрывки из литература. <br /><br /> Никогда не раскрывайте свой пароль. Если вы его потеряете - вы потеряете доступ к вашей учетной записи!",
+  "passphrase_warning": "Внимание: парольная фраза-это все, что стоит между вашей учетной записи и остальной частью мира. Не используйте какие либо известные фразы и предложения, особенно тексты песен или отрывки из литература. <br /><br /> Никогда не раскрывайте свой пароль. Если вы его потеряете - вы потеряете доступ к вашей учетной записи!",
   "passphrase_write_below": "Ваша секретная фраза очень важна! Для того, чтобы быть уверенным, что вы сохранили её правильно, пожалуйста, напишите вашу секретную фразу ниже:",
   "password_required_for_decryption": "Ваш пароль требуется для расшифровки этих сообщений.",
   "payload": "Комерческая нагрузка",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "Аккаунт получателя не содержит открытого ключа, что означает, что он никогда не создавал исходящих транзакций. Аккаунт имеет баланс __burst__ BURST. Пожалуйста, проверьте адрес получателя перед отправкой.",
   "recipient_no_public_key_pka": "Счет получателя не имеет публичного ключа, это означает, что в нем нет ни одной исходящей транзакции. Счет имеет баланс __burst__ BURST. Для отправки этого запроса необходимо также добавить публичный ключ получателя.",
   "recipient_problem": "Существует проблема с учетной записью получателя:",
-  "recipient_public_key_account": "Публичный ключ соответствует счету <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "Публичный ключ соответствует счету __account_id__.",
   "recipient_public_key_already_announced": "Публичный ключ этого счета уже анонсирован. Вместо этого пожалуйста используйте номер счета.",
   "recipient_unknown": "Счет получателя является неизвестным аккаунтом, что означает, что он никогда не имел входящих или исходящих транзакций. Пожалуйста, проверьте адрес получателя перед отправкой.",
   "recipient_unknown_pka": "Счет получателя неизвестен, это означает, что в нем нет ни входящих, ни исходящих транзакций. Для отправки этого запроса необходимо также указать публичный ключ получателя.",
@@ -729,7 +729,7 @@
   "sell": "Продать",
   "sell_alias": "Продать псевдоним",
   "sell_asset_for_burst": "Продать __assetName__ за BURST",
-  "sell_order_description": "Продать <strong>__quantity__ __asset_name__</strong> активов за <strong>__burst__ BURST</strong> каждый.",
+  "sell_order_description": "Продать __quantity__ __asset_name__ активов за __burst__ BURST каждый.",
   "sell_order_description_help": "За проданную единицу актива Вы получите __burst__ BURST, и получите в общей сложности __total_burst__ BURST, как только будут проданы все.",
   "sell_orders": "Ордер на продажу",
   "sell_to_anyone": "Продать кому-либо",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Если вы хотите начать форжинг, введите ваш пароль для подтверждения.",
   "state": "Состояние",
   "status": "Статус",
-  "status_account_id": "Ваш ID аккаунта: <strong>__account_id__</strong>",
+  "status_account_id": "Ваш ID аккаунта: __account_id__",
   "status_blockchain_downloading": "Блокчейн в настоящее время загружается. Пожалуйста, дождитесь полной загрузки.",
   "status_blockchain_rescanning": "В настоящее время  blockchain ре-сканируется. Пожалуйста, подождите когда процесс будет завершен.",
-  "status_new_account": "Добро пожаловать в ваш новый BURST счет. Номер вашего счета <strong>__account_id__</strong>",
-  "status_new_account_old": "Добро пожаловать в Ваш новый аккаунт BURST. Ваш аккаунтt ID <strong>__account_id__</strong>. Нсколько монет у Вас уже есть.",
+  "status_new_account": "Добро пожаловать в ваш новый BURST счет. Номер вашего счета __account_id__",
+  "status_new_account_old": "Добро пожаловать в Ваш новый аккаунт BURST. Ваш аккаунтt ID __account_id__. Нсколько монет у Вас уже есть.",
   "stop_forging": "Остановить форжинг",
   "stop_forging_confirmation": "Если вы уверены, что хотите, остановить форжинг, нажмите на кнопку ниже для подтверждения.",
   "stop_forging_confirmation_passphrase": "Если вы уверены, что вы хотите остановить форжинг, введите ваш пароль для подтверждения.",
@@ -831,8 +831,8 @@
   "tags": "Теги",
   "tags_categories": "Теги (категории)",
   "tentative": "Предварительный",
-  "testnet_login_warning": "Войдите в систему с аккаунтом  <strong>TestNet</strong> - не с вашим реальным аккаунтом!</div>",
-  "testnet_warning": "<strong>Предупреждение</strong>: вы подключились к Тестовой Сети. Не используйте ваш реальный пароль!",
+  "testnet_login_warning": "Войдите в систему с аккаунтом  TestNet - не с вашим реальным аккаунтом!</div>",
+  "testnet_warning": "Предупреждение: вы подключились к Тестовой Сети. Не используйте ваш реальный пароль!",
   "theme_settings": "Настройки Темы",
   "time": "Время",
   "timestamp": "Метка времени",
