--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Napredno",
   "alias": "Pseudonim",
   "alias_account_help": "Pseudonim je vezan s unijetim brojem računa i može se koristiti za prihvat poruka, burst-a, itd..",
-  "alias_account_link": "The alias links to account <strong>__account_id__</strong>",
+  "alias_account_link": "The alias links to account __account_id__",
   "alias_account_no_link": "Pseudonim nema poveznicu na račun. ",
   "alias_assignment": "Dodjeljivanje pseudonima",
   "alias_buy": "Kupovina pseudonima",
@@ -64,8 +64,8 @@
   "asset_decimals": "Asset decimale",
   "asset_decimals_help": "Maksimalni dozvoljeni broj znamenki nakon decimalne točke u količini asseta.",
   "asset_exchange": "Asset Exchange",
-  "asset_exchange_duplicates_warning": "<strong>Warning</strong>: There is 1 other asset with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Warning</strong>: There are __count__ other assets with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
+  "asset_exchange_duplicates_warning": "Warning: There is 1 other asset with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
+  "asset_exchange_duplicates_warning_plural": "Warning: There are __count__ other assets with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
   "asset_exchange_tutorial": "Priručnik za Asset Exchange",
   "asset_issuance": "Izdavanje asseta",
   "asset_minimum_fee_help": "Minimalna provizija za kreiranje asseta iznosi 1,000 burst.",
@@ -111,7 +111,7 @@
   "buy_alias": "Kupi pseudonim",
   "buy_asset_with_burst": "Kupi __assetName__ za burst",
   "buy_it_q": "Kupujete?",
-  "buy_order_description": "Buy <strong>__quantity__ __asset_name__</strong> assets at <strong>__burst__ BURST</strong> each.",
+  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ BURST each.",
   "buy_order_description_help": "Za cijenu jednog asseta platit ćete __burst__ burst, što iznosi ukupno __total_burst__ burst kad kompletirate kupnju.",
   "buy_orders": "Kupovni nalozi",
   "buyer": "Kupac",
@@ -152,10 +152,10 @@
   "connected_peers": "Spojeni peers",
   "console": "Konzola",
   "console_opened": "Konzola pokrenuta. Bilježenje započeto...",
-  "contact_account_link": "The contact links to account <strong>__account_id__</strong>.",
+  "contact_account_link": "The contact links to account __account_id__.",
   "contact_name": "Ime kontakta",
   "contacts": "Kontakti",
-  "contacts_local_storage_help": "<strong>Remember</strong>: Contacts are stored locally, not on the blockchain.",
+  "contacts_local_storage_help": "Remember: Contacts are stored locally, not on the blockchain.",
   "contacts_no_db_warning": "Vaš preglednik ne podržava pristup bazama podataka, bez njih kontakti ne mogu biti kreirani.",
   "continue_forging": "Nastavi kovanje",
   "copy_account_id": "Kopiraj račun ID",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Netočna uplata.",
   "error_invalid_referenced_transaction_hash": "Netočan hash referentne transakcije.",
   "error_invalid_seller": "Netočan ID prodavatelja",
-  "error_invalid_token": "The token is <strong>NOT VALID</strong>. It appears to belong to account __account_link__. It was generated on __timestamp__.",
+  "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
   "error_issue_asset": "Pojavila se nepoznata greška! Asset može ali i ne mora biti kreiran.",
   "error_max_amount_warning": "Vaš iznos je viši od __burst__ burst. Jeste li sigurni da želite nastaviti? Kliknite na pošalji gumb ponovno za potvrdu.",
   "error_max_asset_transfer_warning": "Tražena količina je viša od __qty__. jeste li sigurni da želite nastaviti. Kliknite na gumb pošalji za potvrdu.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Iskovali ste",
   "forged_fees_total": "Ukupne provizije kovanja",
   "forging": "Kovanje",
-  "fork_warning": "<strong>Warning</strong>: You are most likely on a fork (you have forged the last 10 blocks).",
+  "fork_warning": "Warning: You are most likely on a fork (you have forged the last 10 blocks).",
   "form_warnings": "Polje upozorenja",
   "form_warnings_help": "Prikaži upozorenje kad je iznos / provizija veći od ispod prikazanog iznosa.",
   "free_memory": "Slobodna memorija",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Priručnik za sučelje",
   "is_scanning": "Pretražuje se",
   "issue_asset": "Izdaj asset",
-  "issue_asset_warning": "<strong>Warning</strong>: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
   "item_name": "Ime artikla",
   "language": "Jezik",
   "last_block": "Posljednji blok",
@@ -583,7 +583,7 @@
   "no_polls_found": "Ankete nisu pronađene.",
   "no_products_found": "Proizvodi nisu pronađeni.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_warning": "<strong>Warning!</strong>: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
   "no_purchased_products_found": "Nema pronađenih kupljenih proizvoda.",
   "no_sell_orders_for_asset": "Nema prodajnih naloga za ovaj asset.",
   "no_trade_history": "Povijest trgovanja ne postoji.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Raščlani transakciju",
   "parse_transaction_bytes": "Parse Transaction Bytes",
   "passphrase": "Lozinka",
-  "passphrase_disclosure_warning": "<strong>Attention</strong>: Don't ever disclose your passphrase. If you lose it you lose access to your account!",
+  "passphrase_disclosure_warning": "Attention: Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_length_warning": "Vaša lozinka mora sadržavati minimalno 35 znakova.",
-  "passphrase_remote_warning": "<strong>Warning</strong>: Your passphrase will be sent to the server!",
+  "passphrase_remote_warning": "Warning: Your passphrase will be sent to the server!",
   "passphrase_required_to_decrypt_data": "Za dekodiranja ovih podataka potrebno je unijeti vašu lozinku.",
-  "passphrase_warning": "<strong>Attention</strong>: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
+  "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Vaša fraza predstavlja vašu lozinku i vrlo je važna! Kako bismo se uvjerili da ste ju spremili, molimo upišite ju ponovo u ponuđeni formular: ",
   "password_required_for_decryption": "Vaša lozinka je potrebna za dekodiranje ove poruke.",
   "payload": "Plaćeni teret",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "Primateljev račun nema javni ključ, što znači da nema odrađenu transakciju prema van. Račun ima saldo od __burst__ burst. Preporučamo dvostruku provjeru adrese primatelja prije slanja.",
   "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "Postoji problem s računom primatelja: ",
-  "recipient_public_key_account": "The public key corresponds to account <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "Javni ključ ovog računa je već oglašen. Koristite ID računa umjesto javnog ključa.",
   "recipient_unknown": "Račun primatelja je nepoznat, što znači da nikada nije imao dolazeću ili odlazeću transakciju. Molimo provjerite još jednom adresu primatelja prije slanja.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
@@ -729,7 +729,7 @@
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
   "sell_asset_for_burst": "Prodaj __assetName__ za burst",
-  "sell_order_description": "Sell <strong>__quantity__ __asset_name__</strong> assets at <strong>__burst__ BURST</strong> each.",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
   "sell_order_description_help": "Za prodaju cijelog asseta primit ćete __burst__ burst, što je ukupno of __total_burst__ burst u trenutku kompletne prodaje.",
   "sell_orders": "Prodajni nalozi",
   "sell_to_anyone": "Prodaj bilo kome",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Ako želite započeti s kovanjem, unesite vašu lozinku za potvrdu.",
   "state": "Stanje",
   "status": "Status",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain je u fazi preuzimanja. Molimo pričekajte završetak procesa.",
   "status_blockchain_rescanning": "Blockchain se trenutno reskenira. Molimo vas pričekajte završetak tog procesa.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Prestani kovati",
   "stop_forging_confirmation": "Ako ste sigurni da želite prekinuti kovanje, kliknite na donji gumb za potvrdu.",
   "stop_forging_confirmation_passphrase": "Ako ste sigurni da želite prestati s kovanjem, molimo unesite vašu lozinku za potvrdu.",
@@ -831,8 +831,8 @@
   "tags": "Tagovi",
   "tags_categories": "Oznake (kategorije)",
   "tentative": "Privremeni",
-  "testnet_login_warning": "Log in with your <strong>TestNet</strong> account - not your real one!</div>",
-  "testnet_warning": "<strong>Warning</strong>: You are connected to the TestNet. Do not use your real passphrase!",
+  "testnet_login_warning": "Log in with your TestNet account - not your real one!</div>",
+  "testnet_warning": "Warning: You are connected to the TestNet. Do not use your real passphrase!",
   "theme_settings": "Postavke teme",
   "time": "Vrijeme",
   "timestamp": "Vremenska oznaka",
