--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "Напредно",
   "alias": "Алиас",
   "alias_account_help": "Алиас ће бити повезан са унетим бројем налога. Алиас можете користити за слање НXТ-а, порука, итд..",
-  "alias_account_link": "Алиас је повезан са налогом <strong>__account_id__</strong>",
+  "alias_account_link": "Алиас је повезан са налогом __account_id__",
   "alias_account_no_link": "Алиас није повезан ни са једним налогом. ",
   "alias_assignment": "Додељивање Алиаса",
   "alias_buy": "Kupi Алиас",
@@ -64,8 +64,8 @@
   "asset_decimals": "Ассет Децимале",
   "asset_decimals_help": "Максимални дозвољени број карактера након децималне тачке у количини ассет-а.",
   "asset_exchange": "Берза Ассет-а",
-  "asset_exchange_duplicates_warning": "<strong>Упозорење</strong>: Постоји ассет са истим називом у берзи ассет-а. Молимо Вас проверите јесте ли одабрали прави. За потврду проверите ИД налога и ИД ассет-а.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Упозорење</strong>: Постојe __count__ других ассет-а са истим називом у берзи ассет-а. Молимо Вас проверите јесте ли одабрали прави. За потврду проверите ИД налога и ИД ассет-а.",
+  "asset_exchange_duplicates_warning": "Упозорење: Постоји ассет са истим називом у берзи ассет-а. Молимо Вас проверите јесте ли одабрали прави. За потврду проверите ИД налога и ИД ассет-а.",
+  "asset_exchange_duplicates_warning_plural": "Упозорење: Постојe __count__ других ассет-а са истим називом у берзи ассет-а. Молимо Вас проверите јесте ли одабрали прави. За потврду проверите ИД налога и ИД ассет-а.",
   "asset_exchange_tutorial": "Упутство за Берзу Ассета",
   "asset_issuance": "Издавање Ассет-а",
   "asset_minimum_fee_help": "Минимална провизија за креирање ассет-а износи 1,000 Burst.",
@@ -111,7 +111,7 @@
   "buy_alias": "Купите Алиас",
   "buy_asset_with_burst": "Купите __assetName__ за BURST",
   "buy_it_q": "Купујете?",
-  "buy_order_description": "Купите <strong>__quantity__ __asset_name__</strong> ассет-а за <strong>__burst__ BURST-a</strong>.",
+  "buy_order_description": "Купите __quantity__ __asset_name__ ассет-а за __burst__ BURST-a.",
   "buy_order_description_help": "За цену једног асета платићете __burst__ BURST, što iznosi ukupno __total_burst__ BURST кад комплетирате куповину.",
   "buy_orders": "Куповни Налози",
   "buyer": "Купац",
@@ -152,10 +152,10 @@
   "connected_peers": "Спојени пеерс-и",
   "console": "Конзола",
   "console_opened": "Конзола покренута. Логин започет...",
-  "contact_account_link": "Контакт је повезан са налогом <strong>__account_id__</strong>.",
+  "contact_account_link": "Контакт је повезан са налогом __account_id__.",
   "contact_name": "Име контакта",
   "contacts": "Контакти",
-  "contacts_local_storage_help": "<strong>Запамтите</strong>: Контакти су сачувани локално, не на blockchain-у.",
+  "contacts_local_storage_help": "Запамтите: Контакти су сачувани локално, не на blockchain-у.",
   "contacts_no_db_warning": "Ваш претраживач не подржава приступ базама података, без којих контакти не могу бити креирани.",
   "continue_forging": "Настави Ковање",
   "copy_account_id": "Копирајте ID Налога",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Нетачна уплата.",
   "error_invalid_referenced_transaction_hash": "Нетачан Hash референтне трансакције.",
   "error_invalid_seller": "Нетачан ID Продавца",
-  "error_invalid_token": "Token <strong>NIJE VAŽEĆI</strong>. Чини се да припада налогу __account_link__. Вријеме генерисања: __timestamp__.",
+  "error_invalid_token": "Token NIJE VAŽEĆI. Чини се да припада налогу __account_link__. Вријеме генерисања: __timestamp__.",
   "error_issue_asset": "Појавила се непозната грешка! Ассет може али и не мора бити креиран.",
   "error_max_amount_warning": "Ваш износ је већи од __burst__ BURST. Јесте ли сигурни да желите наставити? Кликните поново на дугме пошаљи за потврду.",
   "error_max_asset_transfer_warning": "Тражена количина је виша него __qty__. Да ли сте сигурни да желите да наставите? Кликните дугме да бисте потврдили.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Исковали сте",
   "forged_fees_total": "Укупна Искована Провизија",
   "forging": "Ковање",
-  "fork_warning": "<strong>Пажња</strong>: Највероватније сте на форк-у (исковали сте последњих 10 блокова).",
+  "fork_warning": "Пажња: Највероватније сте на форк-у (исковали сте последњих 10 блокова).",
   "form_warnings": "Тренутно не кујете",
   "form_warnings_help": "Прикажи упозорење када је износ/ провизија већа од испод приказаног износа.",
   "free_memory": "Слободна Меморија",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Упутство за Интерфејс",
   "is_scanning": "Претражује се",
   "issue_asset": "Издајте Ассет",
-  "issue_asset_warning": "<strong>Упозорење</strong>: Након потврде више никада нећете моћи променити ову информацију. Проверите њену исправност.",
+  "issue_asset_warning": "Упозорење: Након потврде више никада нећете моћи променити ову информацију. Проверите њену исправност.",
   "item_name": "Назив производа/ услуге",
   "language": "Језик",
   "last_block": "Посљедњи блок",
@@ -583,7 +583,7 @@
   "no_polls_found": "Анкете нису пронађење.",
   "no_products_found": "Производи нису пронађени.",
   "no_products_listed_yet": "Нисте понудили ниједан производ на продају,  <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>додајте један.</a>",
-  "no_public_key_warning": "<strong>Пажња!</strong>: Ваш налог не поседује јавни кључ! Ваш налог није заштићен као други налози. Морате извршити 1 одлазећу трансакцију да бисте поправили овај проблем.",
+  "no_public_key_warning": "Пажња!: Ваш налог не поседује јавни кључ! Ваш налог није заштићен као други налози. Морате извршити 1 одлазећу трансакцију да бисте поправили овај проблем.",
   "no_purchased_products_found": "Нема нађених купљених производа.",
   "no_sell_orders_for_asset": "Нема продајних налога за овај ассет.",
   "no_trade_history": "Историја трговања не постоји.",
@@ -630,11 +630,11 @@
   "parse_transaction": "Рашчлани Трансакцију",
   "parse_transaction_bytes": "Расчланите Трансакцију",
   "passphrase": "Лозинка",
-  "passphrase_disclosure_warning": "<strong>Пажња</strong>: Немојте никада открити вашу лозинку. Ако је изгубите изгубићете могућност приступа вашем налогу!",
+  "passphrase_disclosure_warning": "Пажња: Немојте никада открити вашу лозинку. Ако је изгубите изгубићете могућност приступа вашем налогу!",
   "passphrase_length_warning": "Ваша лозинка мора садржати минимално 35 знакова.",
-  "passphrase_remote_warning": "<strong>Упозорење</strong>: Ваша лозинка ће бити послана на сервер!",
+  "passphrase_remote_warning": "Упозорење: Ваша лозинка ће бити послана на сервер!",
   "passphrase_required_to_decrypt_data": "Ваша лозинка је неопходна за дешифровање ових података.",
-  "passphrase_warning": "<strong>Упозорење</strong>: Лозинка је једино што дели ваш налог од остатка света. Не користите познате реченице, посебно избегавате оне из популарних песама и света прозе.<br /><br />Никада не показујте вашу лозинку. Ако је изгубите, изгубили сте приступ вашем налогу и свему што се на њему налази!",
+  "passphrase_warning": "Упозорење: Лозинка је једино што дели ваш налог од остатка света. Не користите познате реченице, посебно избегавате оне из популарних песама и света прозе.<br /><br />Никада не показујте вашу лозинку. Ако је изгубите, изгубили сте приступ вашем налогу и свему што се на њему налази!",
   "passphrase_write_below": "Ваша фраза представља вашу лозинку и врло је важна! Како бисмо се уверили да сте је запамтили, молимо упишите је поново у понуђени формулар:",
   "password_required_for_decryption": "Ваша лозинка је потребна за декодирање ове поруке.",
   "payload": "Плаћени Терет",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "Налог примаоца нема јавни кључ, што значи да никада није имао ниједну спољашну трансакцију. Налог има салдо од  __burst__ BURST. Молимо Вас проверите адресу примаоца још једанпут.",
   "recipient_no_public_key_pka": "Налог примаоца нема јавни кључ, што значи да никада није имао одлазну трансакцију. Налог има салдо од __burst__ BURST-а. Да бисте потврдили ваш избор морате такође да прецизирате јавни кључ примаоца.",
   "recipient_problem": "Постоји проблем са налогом примаоца:",
-  "recipient_public_key_account": "Јавни кључ се слаже са налогом <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "Јавни кључ се слаже са налогом __account_id__.",
   "recipient_public_key_already_announced": "Јавни кључ овог налога је већ оглашен. Користите ИД налога уместо јавног кључа.",
   "recipient_unknown": "Налог примаоца је непознат налог, што значи да никада није имао долазећу или одлазећу трансакцију. Молимо Вас да проверите још једном адресу примаоца пре него што наставите.",
   "recipient_unknown_pka": "Налог примаоца је непознат налог, што значи да никада није имао долазну или oдлазну трансакцију. Да бисте потврдили ваш избор морате да прецизирате јавни кључ примаоца.",
@@ -729,7 +729,7 @@
   "sell": "Продај",
   "sell_alias": "Продајте Алиас",
   "sell_asset_for_burst": "Продајте __assetName__ за BURST",
-  "sell_order_description": "Продајте <strong>__quantity__ __asset_name__</strong> asset-a za <strong>__burst__ BURST-a</strong>.",
+  "sell_order_description": "Продајте __quantity__ __asset_name__ asset-a za __burst__ BURST-a.",
   "sell_order_description_help": "За продају целог асета примићете __burst__ BURST, што је укупно __total_burst__ BURST  у тренутку комплетне продаје.",
   "sell_orders": "Продајни Налози",
   "sell_to_anyone": "Продајте Било Коме",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Ако желите да започнете ковање, молимо Вас да унесете своју лозинку.",
   "state": "Стање",
   "status": "Статус",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain је у фази преузимања. Молимо сачекајте завршетак процеса.",
   "status_blockchain_rescanning": "Blockchain се рескенира. Молим Вас сачекајте да се процес заврши.",
-  "status_new_account": "Добродошли у ваш нови BURST налог. ИД вашег налога је <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Добродошли у ваш нови BURST налог. ИД вашег налога је __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Престаните Ковати",
   "stop_forging_confirmation": "Ако сте сигурни да желите прекинути ковање, кликните на доње дугме за потврду.",
   "stop_forging_confirmation_passphrase": "Ако сте сигурни да желите да престанете са ковањем, молимо Вас да унесете лозинку и то потврдите.",
@@ -831,8 +831,8 @@
   "tags": "Ознаке",
   "tags_categories": "Ознаке (категорије)",
   "tentative": "Привремени",
-  "testnet_login_warning": "Пријавите се сa вашим <strong>ТestNet</strong> налогом - не користите прави налог!</div>",
-  "testnet_warning": "<strong>Упозорење</strong>: Спојени сте на ТестНет. Не користите вашу праву лозинку!",
+  "testnet_login_warning": "Пријавите се сa вашим ТestNet налогом - не користите прави налог!</div>",
+  "testnet_warning": "Упозорење: Спојени сте на ТестНет. Не користите вашу праву лозинку!",
   "theme_settings": "Подешавање Теме",
   "time": "Време",
   "timestamp": "Временски Печат",
