--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -26,7 +26,7 @@
   "advanced_uppercase": "高级",
   "alias": "别名",
   "alias_account_help": "别名将与输入的账号相关联，可用来发送BURST、信息等。",
-  "alias_account_link": "该别名的关联账号是 <strong>__account_id__</strong>",
+  "alias_account_link": "该别名的关联账号是 __account_id__",
   "alias_account_no_link": "该别名没有链接到帐户。",
   "alias_assignment": "别名转让",
   "alias_buy": "购买别名",
@@ -64,8 +64,8 @@
   "asset_decimals": "资产小数位数",
   "asset_decimals_help": "资产数量小数点后允许的最大位数。",
   "asset_exchange": "资产交易",
-  "asset_exchange_duplicates_warning": "<strong>警告</strong>： 在资产交易中存在1个相同名称的资产。请确保您的选择是正确的。确认账户和资产 ID。",
-  "asset_exchange_duplicates_warning_plural": "<strong>警告</strong>： 在资产交易中有 __count__ 个相同名称的资产。请确保您的选择是正确的。确认账户和资产 ID。",
+  "asset_exchange_duplicates_warning": "警告： 在资产交易中存在1个相同名称的资产。请确保您的选择是正确的。确认账户和资产 ID。",
+  "asset_exchange_duplicates_warning_plural": "警告： 在资产交易中有 __count__ 个相同名称的资产。请确保您的选择是正确的。确认账户和资产 ID。",
   "asset_exchange_tutorial": "资产交易教程",
   "asset_issuance": "资产发行",
   "asset_minimum_fee_help": "发行资产的最低费用是1,000 Burst。",
@@ -111,7 +111,7 @@
   "buy_alias": "购买别名",
   "buy_asset_with_burst": "使用BURST购买 __assetName__",
   "buy_it_q": "购买？",
-  "buy_order_description": "以每个资产 <strong>__burst__ BURST</strong> 的价格购买 <strong>__quantity__ 个 __asset_name__</strong> 资产。",
+  "buy_order_description": "以每个资产 __burst__ BURST 的价格购买 __quantity__ 个 __asset_name__ 资产。",
   "buy_order_description_help": "每购买一个整体资产，您将要支付 __burst__ BURST，当购买所有时，总量为__total_burst__ BURST。",
   "buy_orders": "买单",
   "buyer": "买方",
@@ -152,10 +152,10 @@
   "connected_peers": "已连接的节点",
   "console": "控制台",
   "console_opened": "打开控制台。日志记录开始......",
-  "contact_account_link": "与该联系人关联的账号是 <strong>__account_id__</strong> 。",
+  "contact_account_link": "与该联系人关联的账号是 __account_id__ 。",
   "contact_name": "联系人名称",
   "contacts": "联系人",
-  "contacts_local_storage_help": "<strong>记住</strong>： 联系人存储在本地，而不在 blockchain上。",
+  "contacts_local_storage_help": "记住： 联系人存储在本地，而不在 blockchain上。",
   "contacts_no_db_warning": "您的浏览器不支持数据库访问，不能创建联系人。",
   "continue_forging": "继续锻造",
   "copy_account_id": "复制帐户 ID",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "无效的普通支付。",
   "error_invalid_referenced_transaction_hash": "无效的参考交易哈希。",
   "error_invalid_seller": "无效的卖方 ID",
-  "error_invalid_token": "令牌是 <strong>无效的</strong> 。它属于帐户 __account_link__。它的生成时间是 __timestamp__ 。",
+  "error_invalid_token": "令牌是 无效的 。它属于帐户 __account_link__。它的生成时间是 __timestamp__ 。",
   "error_issue_asset": "出现未知错误 ！资产可能创建或未创建。",
   "error_max_amount_warning": "您的数量高于 __burst__ BURST。你确定要继续吗？请再次单击提交按钮以确认。",
   "error_max_asset_transfer_warning": "指定数量大于 __qty__。您确定要继续吗？再次单击提交按钮确认。",
@@ -436,7 +436,7 @@
   "forged_by_you": "由您锻造",
   "forged_fees_total": "锻造费用总计",
   "forging": "锻造中",
-  "fork_warning": "<strong>警告</strong>： 您很可能处在分叉上（您已经锻造了最近的10个区块）。 ",
+  "fork_warning": "警告： 您很可能处在分叉上（您已经锻造了最近的10个区块）。 ",
   "form_warnings": "窗体警告",
   "form_warnings_help": "当输入的数量/费用高于下面的具体数目时显示警告。",
   "free_memory": "可用内存",
@@ -484,7 +484,7 @@
   "interface_tutorial": "界面教程",
   "is_scanning": "正在扫描",
   "issue_asset": "发行资产",
-  "issue_asset_warning": "<strong>警告</strong>： 一旦提交，您将永远不能修改此信息。请确保其正确。",
+  "issue_asset_warning": "警告： 一旦提交，您将永远不能修改此信息。请确保其正确。",
   "item_name": "商品名称",
   "language": "语言",
   "last_block": "最新区块",
@@ -583,7 +583,7 @@
   "no_polls_found": "未找到投票。",
   "no_products_found": "未找到产品。",
   "no_products_listed_yet": "您还没有任何出售的产品 <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'> 添加一个。</a>",
-  "no_public_key_warning": "<strong>警告 ！</strong>： 您的帐户没有公钥 ！这意味着不像其它帐户一样受到保护。您必须发生一次转出交易来解决该问题。",
+  "no_public_key_warning": "警告 ！： 您的帐户没有公钥 ！这意味着不像其它帐户一样受到保护。您必须发生一次转出交易来解决该问题。",
   "no_purchased_products_found": "未找到已购买的产品。",
   "no_sell_orders_for_asset": "该资产没有卖单。",
   "no_trade_history": "没有历史交易记录。",
@@ -630,11 +630,11 @@
   "parse_transaction": "解析交易",
   "parse_transaction_bytes": "解析交易字节",
   "passphrase": "密码",
-  "passphrase_disclosure_warning": "<strong>注意</strong>：千万不要透露您的密码。如果失去它您将无法访问您的帐户！",
+  "passphrase_disclosure_warning": "注意：千万不要透露您的密码。如果失去它您将无法访问您的帐户！",
   "passphrase_length_warning": "您的密码长度必须至少为 35 个字符。",
-  "passphrase_remote_warning": "<strong>警告</strong>： 您的密码将发送到服务器 ！",
+  "passphrase_remote_warning": "警告： 您的密码将发送到服务器 ！",
   "passphrase_required_to_decrypt_data": "解密数据需要您的密码。",
-  "passphrase_warning": "<strong>注意</strong>： 密码是您帐户的一切。不要使用任何有意义的句子，特别是歌词或文学作品 < br / > < br / > 千万不要透露您的密码。如果失去它您将无法访问您的帐户！",
+  "passphrase_warning": "注意： 密码是您帐户的一切。不要使用任何有意义的句子，特别是歌词或文学作品 < br / > < br / > 千万不要透露您的密码。如果失去它您将无法访问您的帐户！",
   "passphrase_write_below": "您的密码是非常重要的 ！为确保您已保存它，请写下下面的密码：",
   "password_required_for_decryption": "需要您的密码来解密这些信息。",
   "payload": "载荷",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "接收者帐户没有公钥，意味着该账户从未有发出的交易。该帐户的余额为 __burst__ BURST。请在提交之前再次确认接收者地址。",
   "recipient_no_public_key_pka": "接收者帐户没有公钥，意味着它从未有转出的交易。该帐户的有效余额为 __burst__ BURST 。为了提交该请求，您还必须提供接收者的公钥。",
   "recipient_problem": "接收者账户出现了一个问题：",
-  "recipient_public_key_account": "公钥对应帐户 <strong>__account_id__</strong>。",
+  "recipient_public_key_account": "公钥对应帐户 __account_id__。",
   "recipient_public_key_already_announced": "该账户的公钥已经公布。使用帐户 ID 来代替。",
   "recipient_unknown": "接收者帐户是未知帐户，意味着它没有转入或转出的交易。请在提交之前再次确认您的接收者地址。",
   "recipient_unknown_pka": "接收者帐户是未知帐户，意味着它从来没有转入或转出的交易记录。为了提交该请求，您还必须提供接收者的公钥。",
@@ -729,7 +729,7 @@
   "sell": "出售",
   "sell_alias": "出售别名",
   "sell_asset_for_burst": "出售__assetName__ 获得BURST",
-  "sell_order_description": "以每个资产 <strong>__burst__ BURST</strong> 的价格出售 <strong>__quantity__个 __asset_name__</strong>。",
+  "sell_order_description": "以每个资产 __burst__ BURST 的价格出售 __quantity__个 __asset_name__。",
   "sell_order_description_help": "每出售一个整体资产，您将会收到 __burst__ BURST，当出售所有时，总量为__total_burst__ BURST。",
   "sell_orders": "卖单",
   "sell_to_anyone": "出售给任何人",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "如果您想要开始锻造，请输入您的密码来确认。",
   "state": "状态",
   "status": "状态",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "正在下载Blockchain 。请等待更新。",
   "status_blockchain_rescanning": "正在重新扫描区块链。请等待完成。",
-  "status_new_account": "欢迎来到新的 BURST 帐户。您的帐户 ID 是 <strong>__account_id__</strong>-当第",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "欢迎来到新的 BURST 帐户。您的帐户 ID 是 __account_id__-当第",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "停止锻造",
   "stop_forging_confirmation": "如果您确定要停止锻造，请单击下面的按钮以确认。",
   "stop_forging_confirmation_passphrase": "如果您想要停止锻造，请输入密码确认。",
@@ -831,8 +831,8 @@
   "tags": "标签",
   "tags_categories": "标签 （类别）",
   "tentative": "暂定",
-  "testnet_login_warning": "用您的 <strong>测试网络</strong> 帐户登录 - 不是您真实的账户！</div>",
-  "testnet_warning": "<strong>警告</strong>： 您正在连接到测试网络。请不要使用您的真实密码 ！",
+  "testnet_login_warning": "用您的 测试网络 帐户登录 - 不是您真实的账户！</div>",
+  "testnet_warning": "警告： 您正在连接到测试网络。请不要使用您的真实密码 ！",
   "theme_settings": "主题设置",
   "time": "时间",
   "timestamp": "时间戳",
