--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -28,7 +28,7 @@
     "aliases_to_account_id": "Alias-i prema ID nalogu",
     "aliases_to_uri": "Aliasi prema URI",
     "alias_account_help": "Alias će biti povezan sa unetim brojem naloga. Alias možete koristiti za slanje BURST-a, poruka, itd..",
-    "alias_account_link": "Alias je povezan sa nalogom <strong>__account_id__<\/strong>",
+    "alias_account_link": "Alias je povezan sa nalogom __account_id__<\/strong>",
     "alias_account_no_link": "Alias nije povezan ni sa jednim nalogom. ",
     "alias_assignment": "Dodeljivanje Aliasa",
     "alias_buy": "Kupi Alias",
@@ -64,8 +64,8 @@
     "asset_decimals": "Asset Decimale",
     "asset_decimals_help": "Maksimalni dozvoljeni broj karaktera nakon decimalne tačke u količini asset-a.",
     "asset_exchange": "Berza Asset-a",
-    "asset_exchange_duplicates_warning": "<strong>Upozorenje<\/strong>: Postoji asset s istim nazivom u berzi asset-a. Molimo Vas proverite jeste li odabrali pravi. Za potvrdu proverite ID naloga i ID asset-a.",
-    "asset_exchange_duplicates_warning_plural": "<strong>Upozorenje<\/strong>: Postoje __count__ drugih asset-a sa istim nazivom u berzi asset-a. Molimo Vas proverite jeste li odabrali pravi. Za potvrdu proverite ID naloga i ID asset-a.",
+    "asset_exchange_duplicates_warning": "Upozorenje<\/strong>: Postoji asset s istim nazivom u berzi asset-a. Molimo Vas proverite jeste li odabrali pravi. Za potvrdu proverite ID naloga i ID asset-a.",
+    "asset_exchange_duplicates_warning_plural": "Upozorenje<\/strong>: Postoje __count__ drugih asset-a sa istim nazivom u berzi asset-a. Molimo Vas proverite jeste li odabrali pravi. Za potvrdu proverite ID naloga i ID asset-a.",
     "asset_exchange_tutorial": "Uputstvo za Berzu Asseta",
     "asset_issuance": "Izdavanje Asset-a",
     "asset_minimum_fee_help": "Minimalna provizija za kreiranje asset-a iznosi 1,000 Burst.",
@@ -111,7 +111,7 @@
     "buy_asset_with_burst": "Kupite __assetName__ za BURST",
     "buy_it_q": "Kupujete?",
     "buy_orders": "Kupovni Nalozi",
-    "buy_order_description": "Kupite <strong>__quantity__ __asset_name__<\/strong> asset-a za <strong>__burst__ BURST-a<\/strong>.",
+    "buy_order_description": "Kupite __quantity__ __asset_name__<\/strong> asset-a za __burst__ BURST-a<\/strong>.",
     "buy_order_description_help": "Za cenu jednog aseta platićete __burst__ BURST, što iznosi ukupno __total_burst__ BURST kad kompletirate kupovinu.",
     "calculate_full_hash": "Izračunajte Kompletan Hash",
     "cancel": "Odustani",
@@ -149,9 +149,9 @@
     "console": "Konzola",
     "console_opened": "Konzola pokrenuta. Login započet...",
     "contacts": "Kontakti",
-    "contacts_local_storage_help": "<strong>Zapamtite<\/strong>: Kontakti su sačuvani lokalno, ne na blockchain-u.",
+    "contacts_local_storage_help": "Zapamtite<\/strong>: Kontakti su sačuvani lokalno, ne na blockchain-u.",
     "contacts_no_db_warning": "Vaš pretraživač ne podržava pristup bazama podataka, bez kojih kontakti ne mogu biti kreirani.",
-    "contact_account_link": "Kontakt je povezan sa nalogom <strong>__account_id__<\/strong>.",
+    "contact_account_link": "Kontakt je povezan sa nalogom __account_id__<\/strong>.",
     "contact_name": "Ime Kontakta",
     "continue_forging": "Nastavi Kovanje",
     "copy_account_id": "Kopirajte ID Naloga",
@@ -326,7 +326,7 @@
     "error_invalid_ordinary_payment": "Netačna uplata.",
     "error_invalid_referenced_transaction_hash": "Netačan hash referentne transakcije.",
     "error_invalid_seller": "Netačan ID Prodavca",
-    "error_invalid_token": "Token <strong>NIJE VAŽEĆI<\/strong>. Čini se da pripada nalogu __account_link__. Vrijeme generisanja: __timestamp__.",
+    "error_invalid_token": "Token NIJE VAŽEĆI<\/strong>. Čini se da pripada nalogu __account_link__. Vrijeme generisanja: __timestamp__.",
     "error_issue_asset": "Pojavila se nepoznata greška! Asset može ali i ne mora biti kreiran.",
     "error_max_amount_warning": "Vaš iznos je veći od __burst__ BURST. Jeste li sigurni da želite nastaviti? Kliknite ponovo na dugme pošalji za potvrdu.",
     "error_max_asset_transfer_warning": "Tražena količina je viša nego __qty__. Da li ste sigurni da želite da nastavite? Kliknite dugme da biste potvrdili.",
@@ -428,7 +428,7 @@
     "forged_by_you": "Iskovali ste",
     "forged_fees_total": "Ukupna Provizija Kovanja",
     "forging": "Kovanje",
-    "fork_warning": "<strong>Pažnja<\/strong>: Najverovatnije ste na fork-u (iskovali ste poslednjih 10 blokova).",
+    "fork_warning": "Pažnja<\/strong>: Najverovatnije ste na fork-u (iskovali ste poslednjih 10 blokova).",
     "form_warnings": "Polje Upozorenja",
     "form_warnings_help": "Prikaži upozorenje kada je iznos\/ provizija veća od ispod prikazanog iznosa.",
     "for_burst": "Za BURST",
@@ -473,7 +473,7 @@
     "info_referenced_transaction_hash": "Pošto koristite Hash referentne transakcije, 50 BURST-a je zamrznuto dok transakcija nije potvrđena ili istekla.",
     "interface_tutorial": "Uputstvo za Interfejs",
     "issue_asset": "Izdajte Asset",
-    "issue_asset_warning": "<strong>Upozorenje<\/strong>: Nakon potvrde više nikada nećete moći promeniti ovu informaciju. Proverite njenu ispravnost.",
+    "issue_asset_warning": "Upozorenje<\/strong>: Nakon potvrde više nikada nećete moći promeniti ovu informaciju. Proverite njenu ispravnost.",
     "is_scanning": "Pretražuje se",
     "item_name": "Naziv proizvoda\/usluge",
     "language": "Jezik",
@@ -575,7 +575,7 @@
     "no_polls_found": "Ankete nisu pronađenje.",
     "no_products_found": "Proizvodi nisu pronađeni.",
     "no_products_listed_yet": "Niste ponudili nijedan proizvod na prodaju, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>dodajte jedan.<\/a>",
-    "no_public_key_warning": "<strong>Pažnja!<\/strong>: Vaš nalog ne poseduje javni ključ! Vaš nalog nije zaštićen kao drugi nalozi. Morate izvršiti 1 odlazeću transakciju da biste popravili ovaj problem.",
+    "no_public_key_warning": "Pažnja!<\/strong>: Vaš nalog ne poseduje javni ključ! Vaš nalog nije zaštićen kao drugi nalozi. Morate izvršiti 1 odlazeću transakciju da biste popravili ovaj problem.",
     "no_purchased_products_found": "Nema nađenih kupljenih proizvoda.",
     "no_sell_orders_for_asset": "Nema prodajnih naloga za ovaj asset.",
     "no_trade_history": "Istorija trgovanja ne postoji.",
@@ -616,11 +616,11 @@
     "parse_transaction": "Raščlani Transakciju",
     "parse_transaction_bytes": "Rasčlanite Transakciju",
     "passphrase": "Lozinka",
-    "passphrase_disclosure_warning": "<strong>Pažnja<\/strong>: Nemojte nikada otkriti vašu lozinku. Ako je izgubite izgubićete mogućnost pristupa vašem nalogu!",
+    "passphrase_disclosure_warning": "Pažnja<\/strong>: Nemojte nikada otkriti vašu lozinku. Ako je izgubite izgubićete mogućnost pristupa vašem nalogu!",
     "passphrase_length_warning": "Vaša lozinka mora sadržati minimalno 35 znakova.",
-    "passphrase_remote_warning": "<strong>Upozorenje<\/strong>: Vaša lozinka će biti poslana na server!",
+    "passphrase_remote_warning": "Upozorenje<\/strong>: Vaša lozinka će biti poslana na server!",
     "passphrase_required_to_decrypt_data": "Vaša lozinka je neophodna za dešifrovanje ovih podataka.",
-    "passphrase_warning": "<strong>Upozorenje<\/strong>: Lozinka je jedino što deli vaš nalog od ostatka sveta. Ne koristite poznate rečenice, posebno izbegavate one iz popularnih pesama i sveta proze.<br \/><br \/>Nikada ne pokazujte vašu lozinku. Ako je izgubite, izgubili ste pristup vašem nalogu i svemu što se na njemu nalazi!",
+    "passphrase_warning": "Upozorenje<\/strong>: Lozinka je jedino što deli vaš nalog od ostatka sveta. Ne koristite poznate rečenice, posebno izbegavate one iz popularnih pesama i sveta proze.<br \/><br \/>Nikada ne pokazujte vašu lozinku. Ako je izgubite, izgubili ste pristup vašem nalogu i svemu što se na njemu nalazi!",
     "passphrase_write_below": "Vaša fraza predstavlja vašu lozinku i vrlo je važna! Kako bismo se uverili da ste je zapamtili, molimo upišite je ponovo u ponuđeni formular:",
     "password_required_for_decryption": "Vaša lozinka je potrebna za dekodiranje ove poruke.",
     "payload": "Plaćeni Teret",
@@ -680,7 +680,7 @@
     "recipient_no_public_key": "Nalog primaoca nema javni ključ, što znači da nikada nije imao nijednu spoljašnu transakciju. Nalog ima saldo od  __burst__ BURST. Molimo Vas proverite adresu primaoca još jedanput.",
     "recipient_no_public_key_pka": "Nalog primaoca nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Nalog ima saldo od __burst__ BURST-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
     "recipient_problem": "Postoji problem sa nalogom primaoca:",
-    "recipient_public_key_account": "Javni ključ se slaže sa nalogom <strong>__account_id__<\/strong>.",
+    "recipient_public_key_account": "Javni ključ se slaže sa nalogom __account_id__<\/strong>.",
     "recipient_public_key_already_announced": "Javni ključ ovog naloga je već oglašen. Koristite ID naloga umesto javnog ključa.",
     "recipient_unknown": "Nalog primaoca je nepoznat nalog, što znači da nikada nije imao dolazeću ili odlazeću transakciju. Molimo Vas da proverite još jednom adresu primaoca pre nego što nastavite.",
     "recipient_unknown_pka": "Nalog primaoca je nepoznat nalog, što znači da nikada nije imao dolaznu ili odlaznu transakciju. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ.",
@@ -722,7 +722,7 @@
     "sell_alias": "Prodajte Alias",
     "sell_asset_for_burst": "Prodajte __assetName__ za BURST",
     "sell_orders": "Prodajni Nalozi",
-    "sell_order_description": "Prodajte <strong>__quantity__ __asset_name__<\/strong> asset-a za <strong>__burst__ BURST-a<\/strong>.",
+    "sell_order_description": "Prodajte __quantity__ __asset_name__<\/strong> asset-a za __burst__ BURST-a<\/strong>.",
     "sell_order_description_help": "Za prodaju celog aseta primićete __burst__ BURST, što je ukupno __total_burst__ BURST u trenutku kompletne prodaje.",
     "sell_to_anyone": "Prodajte Bilo Kome",
     "sell_to_specific_account": "Prodaj Izabranom Računu",
@@ -751,11 +751,11 @@
     "start_forging_confirmation_passphrase": "Ako želite da započnete kovanje, molimo Vas da unesete svoju lozinku.",
     "state": "Stanje",
     "status": "Status",
-    "status_account_id": "Your account ID is: <strong>__account_id__<\/strong>",
+    "status_account_id": "Your account ID is: __account_id__<\/strong>",
     "status_blockchain_downloading": "Blockchain je u fazi preuzimanja. Molimo sačekajte završetak procesa.",
     "status_blockchain_rescanning": "Blockchain se reskenira. Molim Vas sačekajte da se proces završi.",
-    "status_new_account": "Dobrodošli u vaš novi BURST nalog. ID vašeg naloga je <strong>__account_id__<\/strong>",
-    "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__<\/strong>. You should fund it with some coins.",
+    "status_new_account": "Dobrodošli u vaš novi BURST nalog. ID vašeg naloga je __account_id__<\/strong>",
+    "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__<\/strong>. You should fund it with some coins.",
     "stop_forging": "Prestanite Kovati",
     "stop_forging_confirmation": "Ako ste sigurni da želite prekinuti kovanje, kliknite na donje dugme za potvrdu.",
     "stop_forging_confirmation_passphrase": "Ako ste sigurni da želite da prestanete sa kovanjem, molimo Vas da unesete lozinku i to potvrdite.",
@@ -819,8 +819,8 @@
     "tags": "Oznake",
     "tags_categories": "Oznake (kategorije)",
     "tentative": "Privremeni",
-    "testnet_login_warning": "Prijavite se s vašim <strong>TestNet<\/strong> nalogom - ne koristite pravi nalog!<\/div>",
-    "testnet_warning": "<strong>Upozorenje<\/strong>: Spojeni ste na TestNet. Ne koristite vašu pravu lozinku!",
+    "testnet_login_warning": "Prijavite se s vašim TestNet<\/strong> nalogom - ne koristite pravi nalog!<\/div>",
+    "testnet_warning": "Upozorenje<\/strong>: Spojeni ste na TestNet. Ne koristite vašu pravu lozinku!",
     "theme_settings": "Podešavanje Teme",
     "time": "Vreme",
     "timestamp": "Vremenski Pečat",
