--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -64,8 +64,8 @@
   "asset_decimals": "Varlık ondalıkları",
   "asset_decimals_help": " Varlık miktarından sonra  izin verilen en büyük  ondalık  basamak.",
   "asset_exchange": "Varlık değiştirme yeri",
-  "asset_exchange_duplicates_warning": "<strong>Warning</strong>: There is 1 other asset with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
-  "asset_exchange_duplicates_warning_plural": "<strong>Warning</strong>: There are __count__ other assets with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
+  "asset_exchange_duplicates_warning": "Warning: There is 1 other asset with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
+  "asset_exchange_duplicates_warning_plural": "Warning: There are __count__ other assets with the same name in the asset exchange. Please make sure you choose the right one. Look at the account and asset ID for confirmation.",
   "asset_exchange_tutorial": "Asset Exchange Tutorial",
   "asset_issuance": "Varlık yayınlama",
   "asset_minimum_fee_help": "Varlık yayınlamanın minimum ücretti 1.000 burst 'tir.",
@@ -152,10 +152,10 @@
   "connected_peers": "Bağlı eşler",
   "console": "Konsol",
   "console_opened": "Konsol açık. Giriş  başlıyor...",
-  "contact_account_link": "The contact links to account <strong>__account_id__</strong>.",
+  "contact_account_link": "The contact links to account __account_id__.",
   "contact_name": "Kişi adı",
   "contacts": "Rehber",
-  "contacts_local_storage_help": "<strong>Remember</strong>: Contacts are stored locally, not on the blockchain.",
+  "contacts_local_storage_help": "Remember: Contacts are stored locally, not on the blockchain.",
   "contacts_no_db_warning": "Your browser does not support database access, without which contacts cannot be created.",
   "continue_forging": "Katkıya devam",
   "copy_account_id": "Hesap ID'sini kopyalayın",
@@ -331,7 +331,7 @@
   "error_invalid_ordinary_payment": "Sıradan ödeme geçersiz.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "Geçersiz satıcı kimliği (seller ID)",
-  "error_invalid_token": "The token is <strong>NOT VALID</strong>. It appears to belong to account __account_link__. It was generated on __timestamp__.",
+  "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
   "error_issue_asset": "An unknown error occured! Asset may or may not be created.",
   "error_max_amount_warning": "Your amount is higher than __burst__ BURST. Are you sure you want to continue? Click the submit button again to confirm.",
   "error_max_asset_transfer_warning": "Quantity specified is higher than __qty__. Are you sure you want to continue? Click the submit button again to confirm.",
@@ -436,7 +436,7 @@
   "forged_by_you": "Forged By You",
   "forged_fees_total": "Forged Fees Total",
   "forging": "Forging",
-  "fork_warning": "<strong>Warning</strong>: You are most likely on a fork (you have forged the last 10 blocks).",
+  "fork_warning": "Warning: You are most likely on a fork (you have forged the last 10 blocks).",
   "form_warnings": "Form Warnings",
   "form_warnings_help": "Girilen bir miktar / ücret aşağıda belirtilen değerden yüksek olduğunda bir uyarı göster.",
   "free_memory": "Boş Hafıza",
@@ -484,7 +484,7 @@
   "interface_tutorial": "Interface Tutorial",
   "is_scanning": "Is Scanning",
   "issue_asset": "Issue Asset",
-  "issue_asset_warning": "<strong>Warning</strong>: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
   "item_name": "Item Name",
   "language": "Language",
   "last_block": "Son Blok",
@@ -583,7 +583,7 @@
   "no_polls_found": "No polls found.",
   "no_products_found": "No products found.",
   "no_products_listed_yet": "You haven't listed any products for sale yet, <a href='#'' data-toggle='modal' data-target='#dgs_listing_modal'>add one.</a>",
-  "no_public_key_warning": "<strong>Warning!</strong>: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
+  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. You must make an outgoing transaction to fix this issue.",
   "no_purchased_products_found": "No purchased products found.",
   "no_sell_orders_for_asset": "No sell orders for this asset.",
   "no_trade_history": "No trade history available.",
@@ -630,11 +630,11 @@
   "parse_transaction": "İşlem ayrıştırma",
   "parse_transaction_bytes": "İşlem bayt ayrıştırma",
   "passphrase": "Parola-şifre",
-  "passphrase_disclosure_warning": "<strong>Attention</strong>: Don't ever disclose your passphrase. If you lose it you lose access to your account!",
+  "passphrase_disclosure_warning": "Attention: Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_length_warning": "Şifre en az 35 karakter uzunluğunda olmalıdır.",
   "passphrase_remote_warning": "Şifreniz sunucuya gönderilecektir!",
   "passphrase_required_to_decrypt_data": "Your passphrase is required to decrypt this data.",
-  "passphrase_warning": "<strong>Attention</strong>: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
+  "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Your passphrase is very important! In order to be sure that you have saved it, please write your passphrase below:",
   "password_required_for_decryption": "Bu iletinin şifresini çözmek için şifreniz gerekirlidir.",
   "payload": "Yükü",
@@ -690,7 +690,7 @@
   "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. Please double check your recipient address before submitting.",
   "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "There is a problem with the recipient account:",
-  "recipient_public_key_account": "The public key corresponds to account <strong>__account_id__</strong>.",
+  "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
@@ -729,7 +729,7 @@
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "burst için __assetName__ Satış",
-  "sell_order_description": "Sell <strong>__quantity__ __asset_name__</strong> assets at <strong>__burst__ BURST</strong> each.",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
   "sell_order_description_help": "Per whole asset sold you will receive __burst__ BURST, making a total of __total_burst__ BURST once everything has been sold.",
   "sell_orders": "Sell Orders",
   "sell_to_anyone": "Sell to Anyone",
@@ -761,11 +761,11 @@
   "start_forging_confirmation_passphrase": "Dövmeği , onaylamak için parolanızıı girin.",
   "state": "Durum",
   "status": "Durum",
-  "status_account_id": "Your account ID is: <strong>__account_id__</strong>",
+  "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "The blockchain is currently downloading. Please wait until it is up to date.",
   "status_blockchain_rescanning": "The blockchain is currently rescanning. Please wait until that has completed.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is <strong>__account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Stop Forging",
   "stop_forging_confirmation": "If you are sure you want to stop forging, click the button below to confirm.",
   "stop_forging_confirmation_passphrase": "If you are sure you want to stop forging, type your passphrase to confirm.",
@@ -831,8 +831,8 @@
   "tags": "Tags",
   "tags_categories": "Tags (categories)",
   "tentative": "Tentative",
-  "testnet_login_warning": "Log in with your <strong>TestNet</strong> account - not your real one!</div>",
-  "testnet_warning": "<strong>Warning</strong>: You are connected to the TestNet. Do not use your real passphrase!",
+  "testnet_login_warning": "Log in with your TestNet account - not your real one!</div>",
+  "testnet_warning": "Warning: You are connected to the TestNet. Do not use your real passphrase!",
   "theme_settings": "Theme Settings",
   "time": "Time",
   "timestamp": "Zaman damgası",
